5개 포스트 시니어급 심화 (Java VThread/HashMap/Stream/JVM, Kafka Outbox)
- java-virtual-thread: Continuation 힙 저장, 피닝 futex 원인, StructuredTaskScope (1139→2043줄)
- java-hashmap-deep: Poisson treeify, RBT rotation, resize lo/hi 비트 마법 (900→1451줄)
- java-stream: Spliterator characteristics, NQ 모델, Gatherers JDK22 (1099→1617줄)
- jvm-architecture: TLAB 포인터 범핑, 티어드 C1/C2 OSR, 탈출분석 스칼라치환 (599→1487줄)
- kafka-outbox-cdc: Debezium WAL/binlog, Saga 보상 Outbox, Exactly-once 3레이어 (493→1821줄)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>