@@ -1,5 +1,5 @@
 ---
-title: "JVM 아키텍처 메모리 구조부터 GC까지"
+title: "JVM 아키텍처 완전 해부 — 클래스 로딩부터 JIT·JMM·다이렉트 메모리까지"
 categories:
 - JAVA
 toc: true
@@ -7,1166 +7,1481 @@ toc_sticky: true
 toc_label: 목차
 ---
 
-**한 줄 요약**: JVM은 바이트코드를 받아 메모리에 올리고, 실행하고, 더 이상 필요 없는 객체를 자동으로 정리하는 가상 머신이다.
+**한 줄 요약**: JVM은 바이트코드를 받아 검증·링킹·초기화 후 메모리에 올리고, 인터프리터와 JIT 컴파일러로 실행하며, GC로 메모리를 자동 회수하는 플랫폼 독립 런타임이다.
 
 ---
 
-## 도입 비유 — JVM은 하나의 공장이다
+## 도입 비유 — JVM은 하나의 정밀 제조 공장이다
 
-JVM을 거대한 제조 공장에 비유해 보겠습니다.
+JVM을 항공기 부품을 생산하는 정밀 제조 공장에 비유해 보겠습니다. 항공기 부품은 규격이 조금만 어긋나도 대형 사고로 이어지기 때문에 입고에서 출고까지 모든 단계에 엄격한 검수가 있습니다.
 
-- **원자재(바이트코드)**: `.java` 파일을 컴파일한 `.class` 파일이 공장 입구로 들어옵니다.
-- **자재 입고팀(Class Loader)**: 원자재를 검수하고, 적절한 창고에 배치합니다.
-- **창고(Runtime Data Area)**: 메서드 영역, 힙, 스택 등 각 부서가 자재를 보관합니다.
-- **생산팀(Execution Engine)**: 인터프리터와 JIT 컴파일러가 실제 작업을 수행해 제품(실행 결과)을 만들어냅니다.
-- **청소팀(Garbage Collector)**: 작업이 끝난 뒤 불필요한 쓰레기(더 이상 참조되지 않는 객체)를 주기적으로 수거합니다.
+- **설계 도면(.class 바이트코드)**: 전 세계 어느 공장에 가져가도 똑같이 읽을 수 있는 국제 표준 도면입니다.
+- **자재 입고팀(Class Loader)**: 도면을 수령해 위조 여부를 검사하고(Verify), 창고 공간을 예약하고(Prepare), 도면 내 부품 번호를 실제 재고 위치로 매핑합니다(Resolve).
+- **창고 시스템(Runtime Data Areas)**: 설계도 캐비닛(Method Area), 완성품 보관소(Heap), 직원별 작업 메모장(Stack), 현재 작업 위치 표시(PC Register).
+- **생산팀(Execution Engine)**: 처음에는 도면을 보며 수작업(Interpreter)하고, 자주 반복되는 공정은 자동화 기계로 전환(JIT)합니다. C1 기계는 빠르게 자동화하고, C2 기계는 느리지만 최고 효율로 최적화합니다.
+- **청소팀(GC)**: 사용이 끝난 부품과 공간을 주기적으로 정리합니다. 잠깐 멈추고 청소하는 것(STW)이 불가피하지만, 현대 GC는 멈춤 시간을 최소화합니다.
 
-이 공장의 비유를 머릿속에 담아두고, 각 팀이 어떻게 돌아가는지 구석구석 살펴보겠습니다.
+이 공장 비유를 머릿속에 담아두고, 각 팀의 내부 메커니즘을 해부해 보겠습니다.
 
 ---
 
-## 1. JVM이란?
+## 1. JVM이란 — WHY부터 시작한다
 
-### 1.1 Write Once, Run Anywhere — 왜 이 철학이 필요했나?
+### 1.1 Write Once, Run Anywhere — 왜 이 철학이 필요했나
 
-비유를 하나 드리겠습니다. 1990년대 초 소프트웨어 개발자의 상황은 마치 **전 세계 각지의 콘센트 규격이 다 다른데, 전자제품 하나를 팔려면 나라마다 별도 제품을 만들어야 했던 것**과 같습니다. Windows용 바이너리, Linux용 바이너리, SPARC용 바이너리를 따로 빌드해야 했습니다.
+1990년대 초 소프트웨어 개발 현장은 운영체제와 CPU 아키텍처 조합마다 별도 바이너리를 빌드해야 했습니다. Windows x86, Solaris SPARC, AIX PowerPC 각각 다른 컴파일러 플래그, 다른 ABI(Application Binary Interface), 다른 라이브러리가 필요했습니다.
 
-Java는 이 문제를 **중간 어댑터** 개념으로 해결했습니다. 전 세계 공통 규격인 "바이트코드"를 만들고, 각 플랫폼마다 그 어댑터 역할을 하는 JVM을 설치하게 한 겁니다.
+Java는 이 문제를 **중간 표현(Intermediate Representation)** 개념으로 해결했습니다. 소스를 플랫폼 독립적인 바이트코드로 컴파일하고, 각 플랫폼에 그 바이트코드를 실행하는 JVM을 설치합니다.
 
-```
-Java 소스코드(.java)
-        ↓  javac 컴파일 (개발자 PC에서 1회)
-바이트코드(.class)  ← 어떤 플랫폼에서도 동일한 파일
-        ↓  JVM이 실행 (각 플랫폼의 JVM이 처리)
-  OS/CPU에 맞는 네이티브 코드
-```
-
-**만약 JVM이 없었으면?** C/C++처럼 운영체제와 CPU 아키텍처 조합(Windows x64, Linux ARM64, macOS M1 등) 마다 별도 빌드 파이프라인을 유지해야 합니다. 현대의 클라우드 환경에서 x86과 ARM이 혼재한다는 걸 생각하면, 이게 얼마나 큰 편의인지 실감할 수 있습니다.
-
-### 1.2 JDK vs JRE vs JVM 관계 — 러시아 마트료시카 인형
-
-이 세 가지는 **마트료시카 인형**처럼 중첩된 구조입니다. 가장 작은 인형이 JVM, 그걸 감싸는 게 JRE, 가장 큰 인형이 JDK입니다.
-
-| 구성 요소 | 포함 내용 | 역할 |
-|-----------|-----------|------|
-| **JVM** (Java Virtual Machine) | 실행 엔진, GC, 메모리 관리 | 바이트코드 실행 |
-| **JRE** (Java Runtime Environment) | JVM + 표준 라이브러리(rt.jar 등) | Java 프로그램 실행 환경 |
-| **JDK** (Java Development Kit) | JRE + javac, javadoc, jdb, jstat 등 개발 도구 | Java 개발 환경 |
-
-```
-JDK
-├── JRE
-│   ├── JVM
-│   └── 표준 라이브러리 (java.lang, java.util 등)
-└── 개발 도구 (javac, javap, jconsole, jstack ...)
+```java
+// 개발자 PC에서 딱 한 번 컴파일
+// javac Hello.java → Hello.class
+public class Hello {
+    public static void main(String[] args) {
+        System.out.println("Hello, JVM");
+    }
+}
 ```
 
-실무 팁: Java 9 이후로 JRE가 별도 배포되지 않고 `jlink`로 커스텀 런타임을 만드는 방식으로 변경되었습니다. 도커 이미지를 최소화할 때 `jlink`로 필요한 모듈만 담은 경량 JRE를 만들 수 있습니다.
+```
+[Hello.class 바이트코드 일부 - javap -c Hello]
+public static void main(java.lang.String[]);
+  Code:
+     0: getstatic     #7   // Field java/lang/System.out:Ljava/io/PrintStream;
+     3: ldc           #13  // String Hello, JVM
+     5: invokevirtual #15  // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+     8: return
+```
 
-### 1.3 JVM 벤더별 차이 — 명세서만 있으면 누구나 만들 수 있다
+이 `.class` 파일 하나가 Linux ARM, Windows x64, macOS M1 위의 JVM 어디서든 동일하게 실행됩니다. 클라우드 환경에서 x86과 ARM 인스턴스가 혼재하는 지금, 이것이 얼마나 강력한 추상화인지 실감할 수 있습니다.
 
-JVM은 Oracle이 관리하는 **명세서(specification)**만 따르면 누구든 구현할 수 있습니다. 마치 TCP/IP 프로토콜 명세만 따르면 어느 회사든 네트워크 장비를 만들 수 있는 것과 같습니다.
+**만약 JVM이 없었다면?** AWS Lambda에서 x86으로 빌드한 바이너리가 Graviton(ARM) 인스턴스로 이동하는 순간 실행 불가입니다. Java는 이 문제가 없습니다.
 
-| JVM | 개발사 | 특징 |
-|-----|--------|------|
-| **HotSpot** | Oracle (원 Sun) | 가장 널리 사용. C1/C2 JIT. OpenJDK의 기본 JVM |
-| **OpenJ9** | Eclipse / IBM | 낮은 메모리 사용량, 빠른 시작. IBM WebSphere 계열 |
-| **GraalVM** | Oracle | 폴리글랏(Java, JS, Python 등), AOT 컴파일(Native Image) 지원 |
-| **Azul Zing / Zulu** | Azul Systems | C4 GC(무중단), 초저지연. 금융권에서 선호 |
-| **Amazon Corretto** | Amazon | OpenJDK 기반, AWS 최적화, LTS 지원 확장 |
-| **Microsoft OpenJDK** | Microsoft | Azure 최적화 빌드 |
+### 1.2 JDK vs JRE vs JVM 관계
 
-실무에서는 대부분 **HotSpot(OpenJDK 또는 Oracle JDK)**를 사용합니다. 클라우드 환경에서는 빠른 시작이 중요해 OpenJ9나 GraalVM Native Image가 주목받고 있습니다.
+```
+JDK (개발 + 실행)
+├── JRE (실행 환경)
+│   ├── JVM (바이트코드 실행 엔진)
+│   │   ├── Class Loader
+│   │   ├── Runtime Data Areas
+│   │   ├── Execution Engine (Interpreter + JIT + GC)
+│   │   └── JNI
+│   └── 표준 라이브러리 (java.lang, java.util, java.io ...)
+└── 개발 도구 (javac, javap, jstack, jmap, jstat, JFR ...)
+```
+
+Java 9 이후 JRE가 별도 배포 중단되었습니다. 대신 `jlink`로 필요한 모듈만 묶은 커스텀 런타임을 만들 수 있습니다.
+
+```bash
+# 필요 모듈만 담은 경량 런타임 생성 (Docker 이미지 크기 최소화)
+jlink --module-path $JAVA_HOME/jmods \
+      --add-modules java.base,java.logging \
+      --output /opt/minimal-jre
+# 결과: 수십 MB 수준의 최소 런타임
+```
 
 ---
 
 ## 2. JVM 아키텍처 전체 구조
 
 ```mermaid
-flowchart LR
-    A[".java"] -->|"javac"| B[".class 바이트코드"]
-    B --> CL["ClassLoader: 로딩→링킹"]
-    CL --> MEM["Runtime Data Area:"]
-    MEM --> EE["Execution Engine:"]
-    EE --> JNI["JNI → Native Libra"]
+graph LR
+    SRC[".java 소스"] -->|javac| BC[".class 바이트코드"]
+    BC --> CL["ClassLoader"]
+    CL --> RDA["Runtime Data Areas"]
+    RDA --> EE["Execution Engine"]
+    EE --> OS["OS / Native"]
 ```
 
-각 구성 요소를 순서대로, 내부 동작 원리와 함께 살펴보겠습니다.
+각 구성 요소를 내부 동작 원리와 함께 순서대로 해부합니다.
 
 ---
 
-## 3. Class Loader (클래스 로더) — 공장의 자재 입고팀
+## 3. Class Loader — 부모 위임 모델과 커스텀 로더
 
-### 비유: 수입통관 절차
+### 3.1 Loading → Linking → Initialization 전체 흐름
 
-클래스 로더는 공항 수입통관팀과 같습니다. 해외에서 화물(바이트코드)이 도착하면:
-1. **세관 검사(Verification)**: 규격에 맞는지 확인
-2. **창고 배정(Preparation)**: 보관할 공간 확보
-3. **송장 연결(Resolution)**: 관련 서류(다른 클래스 참조) 연결
-4. **실제 입고(Initialization)**: 창고에 실제 물건 배치
+클래스 로더는 단순히 파일을 읽는 것이 아닙니다. 세 단계 파이프라인을 거칩니다.
 
-단순히 파일을 읽는 것이 아니라 **Loading → Linking → Initialization** 세 단계를 거칩니다.
-
-### 3.1 Loading (로딩) — 파일을 메모리로
-
-클래스 파일을 찾아 바이너리 데이터를 읽고 `java.lang.Class` 객체를 생성합니다.
-
-내부 동작 순서:
-1. 완전한 클래스 이름(Fully Qualified Name)으로 `.class` 파일 탐색
-2. 파일의 바이너리 데이터를 읽어 **Method Area**에 저장
-3. 해당 클래스를 나타내는 `Class` 객체를 **Heap**에 생성
-
-**왜 Class 객체를 Heap에 만드는가?** 나중에 `MyClass.class`, `getClass()`, 리플렉션 등으로 클래스 메타데이터에 접근해야 하기 때문입니다. Heap에 있어야 일반 객체처럼 참조할 수 있습니다.
-
-### 3.2 Linking (링킹) — 검증하고 연결하기
-
-링킹은 세 단계로 나뉩니다.
-
-**Verification (검증) — "이 화물은 위험물이 아닌가?"**
-
-바이트코드가 JVM 명세에 맞는지 확인합니다. 단순 문법 검사가 아닙니다. 예를 들어:
-- 스택 오버플로우를 유발할 수 있는 구조인지
-- 접근 제어(private/protected)를 우회하려는 코드인지
-- 포인터 조작 같은 위험한 코드가 없는지
-
-**만약 Verification이 없다면?** 악의적으로 조작된 `.class` 파일을 JVM에 올려서 메모리를 직접 건드리거나, String 클래스를 내 마음대로 교체하는 보안 공격이 가능해집니다.
-
-**Preparation (준비) — "창고 공간 먼저 확보"**
-
-클래스의 `static` 변수를 위한 메모리를 할당하고, **타입 기본값**으로 초기화합니다. 코드에서 지정한 값이 아닙니다.
-
-```java
-static int count = 5;
-// Preparation 단계: count = 0  ← 아직 5가 아님! int의 기본값
-// Initialization 단계: count = 5  ← 이제 5
+```mermaid
+graph LR
+    L["Loading"] --> V["Verify"]
+    V --> P["Prepare"]
+    P --> R["Resolve"]
+    R --> I["Initialization"]
 ```
 
-**Resolution (해석) — "물류 송장 번호를 실제 주소로 변환"**
-
-심볼릭 참조(Symbolic Reference)를 실제 메모리 참조로 변환합니다.
-
-바이트코드 안에는 `"java/lang/String"` 같은 문자열로 다른 클래스를 참조합니다. 이 문자열을 실제 `String` 클래스가 올라간 메모리 주소로 교체하는 작업입니다.
-
-**왜냐하면** 컴파일 시점에는 다른 클래스가 런타임에 어느 메모리 주소에 올라갈지 알 수 없기 때문입니다. 이 변환은 클래스가 처음 사용될 때 수행됩니다(Lazy Resolution).
-
-### 3.3 Initialization (초기화) — "실제 물건 창고에 배치"
-
-드디어 코드에서 지정한 실제 값이 할당됩니다.
+### 3.2 Loading — 바이너리를 Method Area에 적재
 
 ```java
-public class Example {
-    // Preparation 단계: count = 0 (기본값)
-    // Initialization 단계: count = 5 (지정값 할당)
-    static int count = 5;
+// 클래스 로딩을 명시적으로 트리거하는 방법들
+Class<?> clazz1 = Class.forName("com.example.MyService"); // 즉시 초기화까지
+Class<?> clazz2 = MyService.class;                        // 로딩만, 초기화 X
+ClassLoader cl = Thread.currentThread().getContextClassLoader();
+Class<?> clazz3 = cl.loadClass("com.example.MyService");  // 로딩만
+```
 
-    // Initialization 단계에서 static 블록 실행
+내부 순서:
+1. FQCN(Fully Qualified Class Name)으로 `.class` 파일 탐색
+2. 바이너리 데이터를 읽어 **Method Area**에 클래스 메타데이터 저장
+3. `java.lang.Class` 객체를 **Heap**에 생성 → 리플렉션 API가 이 객체를 통해 메타데이터에 접근
+
+**왜 Class 객체를 Heap에 두는가?** `MyClass.class`, `obj.getClass()`, `Class.forName()` 모두 같은 Class 인스턴스를 반환해야 합니다. Heap에 있어야 일반 객체처럼 GC 관리를 받으면서 참조 가능합니다.
+
+### 3.3 Linking Phase 1 — Verification (검증)
+
+바이트코드가 JVM 명세(JVMS)에 부합하는지 4단계로 검증합니다.
+
+| 검증 단계 | 검사 내용 |
+|-----------|-----------|
+| File Format | 매직 넘버(`0xCAFEBABE`), 버전, 상수풀 구조 |
+| Metadata | 슈퍼클래스 존재 여부, final 클래스 상속 여부 |
+| Bytecode | 오퍼랜드 스택 타입 일관성, 로컬 변수 초기화 전 사용 여부 |
+| Symbolic References | 참조 대상 클래스/메서드/필드 접근 권한 |
+
+```java
+// Verification이 막아주는 공격 시나리오
+// 악의적으로 조작한 .class: private 필드에 직접 접근하는 바이트코드
+// → Bytecode verification 단계에서 IllegalAccessError로 차단
+
+// 실제로 매직 넘버 확인 코드 (학습 목적)
+try (FileInputStream fis = new FileInputStream("MyClass.class")) {
+    byte[] magic = fis.readNBytes(4);
+    // magic = {0xCA, 0xFE, 0xBA, 0xBE}
+    System.out.printf("Magic: %02X%02X%02X%02X%n",
+        magic[0], magic[1], magic[2], magic[3]); // CAFEBABE
+}
+```
+
+**왜 Verification이 필수인가?** C/C++에서는 조작된 코드가 그대로 실행되어 메모리 훼손이 발생합니다. JVM은 Verification으로 이 위협을 원천 차단합니다. `-Xverify:none`으로 끌 수 있지만, 보안과 안정성을 포기하는 것입니다.
+
+**성능 고려**: Java 9 이후 부트스트랩 클래스(rt.jar 역할을 하는 모듈)는 신뢰할 수 있다고 간주해 검증을 건너뜁니다. 사용자 클래스만 전체 검증합니다.
+
+### 3.4 Linking Phase 2 — Preparation (준비)
+
+static 필드를 위한 메모리를 할당하고 **타입 기본값**으로 초기화합니다. 소스에 작성한 값이 아닙니다.
+
+```java
+public class Config {
+    static int timeout    = 5000;   // Preparation: 0 (int 기본값)
+    static String host    = "db";   // Preparation: null (참조 기본값)
+    static boolean active = true;   // Preparation: false (boolean 기본값)
+    // ↑ 이 값들은 Initialization 단계에서야 비로소 5000/"db"/true가 됨
+}
+```
+
+**왜 두 단계로 나누는가?** Preparation 시점에는 상수풀 Resolution이 아직 완료되지 않아 실제 값 계산이 불가능할 수 있습니다. 단계를 나눠 의존성을 순서대로 처리합니다. 단, `static final` 컴파일 타임 상수는 예외적으로 Preparation 단계에 값이 설정됩니다.
+
+```java
+static final int MAX = 100;   // Preparation 단계에 이미 100으로 설정
+static final String HOST = "db"; // 컴파일 타임 상수 → 역시 Preparation에 설정
+static final List<String> LIST = new ArrayList<>(); // 런타임 계산 → Initialization에 설정
+```
+
+### 3.5 Linking Phase 3 — Resolution (해석)
+
+심볼릭 참조(문자열)를 실제 메모리 참조로 교체합니다.
+
+```
+// 바이트코드 상수풀 내 심볼릭 참조 (문자열)
+#5 = Class    "java/lang/String"
+#6 = Methodref "java/io/PrintStream.println:(Ljava/lang/String;)V"
+
+// Resolution 이후
+// 위 문자열 → String 클래스가 실제로 올라간 Method Area 메모리 주소
+//           → println 메서드의 바이트코드 시작 주소
+```
+
+**왜 컴파일 시점에 주소를 박지 않는가?** 클래스가 메모리에 올라가는 주소는 런타임에 결정됩니다. 매번 JVM을 시작할 때마다 달라집니다. 심볼릭 참조를 중간에 두어야 플랫폼 독립성과 동적 로딩이 가능합니다.
+
+**Lazy vs Eager Resolution**: 기본적으로 클래스가 처음 사용되는 시점(Lazy)에 Resolution이 일어납니다. 참조 대상 클래스가 없으면 이 시점에 `NoClassDefFoundError`가 발생합니다.
+
+### 3.6 Initialization — static 초기화 코드 실행
+
+드디어 소스에 작성한 실제 값이 할당되고 static 블록이 실행됩니다.
+
+```java
+public class DatabasePool {
+    static final int MAX_CONN;
+    static final DataSource dataSource;
+
     static {
-        System.out.println("클래스 초기화: " + count);  // "클래스 초기화: 5" 출력
+        // static 블록 = <clinit> 메서드로 컴파일됨
+        MAX_CONN = Integer.parseInt(System.getenv("MAX_CONN"));
+        dataSource = buildDataSource();
+        System.out.println("DB Pool 초기화 완료");
+    }
+
+    // 초기화 순서: Preparation(0/null) → static 블록 실행 → 실제 값 할당
+}
+```
+
+**초기화 트리거 조건 (JLS §12.4.1)**:
+1. 인스턴스 생성: `new DatabasePool()`
+2. static 필드 최초 접근: `DatabasePool.MAX_CONN`
+3. static 메서드 최초 호출: `DatabasePool.getConnection()`
+4. 리플렉션: `Class.forName("DatabasePool")`
+5. JVM 시작 클래스 (main 메서드를 가진 클래스)
+
+**극한 시나리오 — 초기화 중 예외**:
+
+```java
+public class BrokenService {
+    static {
+        if (true) throw new RuntimeException("초기화 실패");
+    }
+}
+
+// 첫 번째 사용
+try {
+    new BrokenService(); // → ExceptionInInitializerError
+} catch (ExceptionInInitializerError e) { /* ... */ }
+
+// 두 번째 사용 — 클래스 자체가 오염됨
+try {
+    new BrokenService(); // → NoClassDefFoundError! (ExceptionInInitializerError 아님)
+} catch (NoClassDefFoundError e) {
+    // "클래스가 없는데?" 하며 당황하는 상황
+    // 실제로는 초기화 실패로 클래스가 broken 상태로 마킹된 것
+}
+```
+
+이것이 실무에서 "멀쩡한 클래스에서 NoClassDefFoundError가 왜?"라는 미스터리의 원인입니다.
+
+**초기화 순서 함정**:
+
+```java
+// 순환 의존 초기화 — 결과가 직관에 반함
+class A {
+    static int x = B.y + 1;  // B를 먼저 초기화
+}
+class B {
+    static int y = A.x + 1;  // A가 아직 초기화 중이므로 A.x = 0 (Preparation 기본값)
+}
+// A.x = 0 + 1 + 1 = 2, B.y = 0 + 1 = 1 (초기화 순서에 따라 달라짐)
+// static 순환 의존은 반드시 피해야 함
+```
+
+### 3.7 부모 위임 모델(Parent Delegation Model) — WHY
+
+클래스 로더 계층:
+
+```
+Bootstrap ClassLoader  ← C++로 구현, JVM 내장
+      ↑ parent
+Platform ClassLoader   ← Java 9+ (이전: Extension CL)
+      ↑ parent
+Application ClassLoader ← 클래스패스 담당
+      ↑ parent
+Custom ClassLoader     ← 사용자 정의
+```
+
+로딩 요청이 들어오면 **자신이 먼저 처리하지 않고 부모에게 위임**합니다. 부모가 실패할 때만 자신이 처리합니다.
+
+```java
+// ClassLoader.loadClass() 의 핵심 로직 (OpenJDK 소스 기반)
+protected Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundException {
+    synchronized (getClassLoadingLock(name)) {
+        // 1. 이미 로드된 클래스인지 캐시 확인
+        Class<?> c = findLoadedClass(name);
+        if (c == null) {
+            try {
+                // 2. 부모에게 먼저 위임 (재귀)
+                if (parent != null) {
+                    c = parent.loadClass(name, false);
+                } else {
+                    // 부모가 null = Bootstrap CL에게 위임
+                    c = findBootstrapClassOrNull(name);
+                }
+            } catch (ClassNotFoundException e) {
+                // 부모가 못 찾음 → 내가 직접 찾음
+            }
+            if (c == null) {
+                // 3. 직접 탐색 (각 CL의 구현 영역)
+                c = findClass(name);
+            }
+        }
+        if (resolve) resolveClass(c);
+        return c;
     }
 }
 ```
 
-**초기화는 언제 일어나는가?** 클래스를 처음 사용하는 시점 — 즉, 정적 필드에 처음 접근하거나, 인스턴스를 처음 생성하거나, 정적 메서드를 처음 호출할 때입니다. `Class.forName("...")` 호출 시에도 초기화됩니다.
+**부모 위임 모델의 WHY:**
 
-**만약 초기화 중 예외가 발생하면?** `ExceptionInInitializerError`가 발생하고, 이 클래스는 다시는 초기화되지 않습니다. 이후 해당 클래스 사용 시도는 `NoClassDefFoundError`가 발생합니다. 이건 실무에서 "왜 멀쩡한 클래스에서 NoClassDefFoundError가?" 하는 미스터리의 원인 중 하나입니다.
+1. **보안**: `java.lang.String` 이름의 악성 클래스를 만들어도, Bootstrap CL이 진짜 String을 먼저 반환합니다. 악성 클래스는 절대 Application CL에 도달하지 못합니다.
 
-### 3.4 클래스 로더 계층 구조 — 상하 위계질서
+2. **유일성**: 같은 클래스가 여러 CL에 의해 중복 로드되지 않습니다. 이미 로드된 클래스는 캐시에서 반환합니다.
 
-```
-Bootstrap ClassLoader (최상위, JVM 내장)
-        ↑ 부모
-Extension/Platform ClassLoader
-        ↑ 부모
-Application ClassLoader (= System ClassLoader)
-        ↑ 부모
-Custom ClassLoader (사용자 정의)
-```
+3. **일관성**: `instanceof`, `ClassCastException` 판단 기준이 되는 Class 객체가 JVM 전체에서 하나임을 보장합니다.
 
-| 클래스 로더 | 로드 대상 | 구현 |
-|-------------|-----------|------|
-| **Bootstrap** | `java.lang.*`, `java.util.*` 등 핵심 라이브러리 | C/C++로 구현 (JVM 내장) |
-| **Extension / Platform** | `$JAVA_HOME/lib/ext` 또는 `java.se` 등 확장 모듈 | Java로 구현 |
-| **Application** | 클래스패스(classpath)에 있는 사용자 클래스, 라이브러리 | Java로 구현 |
-
-### 3.5 부모 위임 모델 — "윗선에 먼저 보고한다"
-
-비유: 군대에서 새로운 명령이 내려오면 말단 병사가 독자적으로 처리하기 전에 위로 보고하는 것과 같습니다. 상급자가 처리할 수 없는 경우에만 하급자가 직접 처리합니다.
-
-```mermaid
-sequenceDiagram
-    Extension_CL->>Bootstrap_CL: 위임
-    Bootstrap_CL->>Extension_CL: 모름
-    Extension_CL->>Application_CL: 모름
-    Application_CL->>Application_CL: 클래스패스에서 직접 로드
-```
-
-**부모 위임 모델의 장점:**
-
-1. **보안**: `java.lang.String`을 악의적으로 교체하는 것을 방지합니다. 누군가 `java.lang.String`이라는 이름의 악성 클래스를 만들어도, Bootstrap CL이 먼저 진짜 String을 로드해버립니다.
-2. **중복 방지**: 같은 클래스가 여러 ClassLoader에 의해 중복 로드되지 않습니다.
-3. **일관성**: 핵심 클래스는 항상 Bootstrap CL이 로드하므로 JVM 전체에서 동일한 클래스 객체가 보장됩니다.
-
-**만약 부모 위임 모델을 우회하면?** OSGi, Tomcat 같은 컨테이너는 실제로 이를 우회합니다(웹앱별 클래스 격리). 하지만 잘못 구현하면 `ClassCastException: com.example.Foo cannot be cast to com.example.Foo` 같은 기이한 오류가 발생합니다. 이름은 같지만 다른 ClassLoader가 로드한 두 개의 클래스는 JVM 입장에서 **완전히 다른 타입**이기 때문입니다.
-
-### 3.6 커스텀 클래스 로더 — 어디서 쓰는가?
+**부모 위임 모델 위반 시 나타나는 현상**:
 
 ```java
-public class CustomClassLoader extends ClassLoader {
+// Tomcat, OSGi 등 웹 컨테이너는 부모 위임을 역전(Child-First)합니다
+// 각 웹앱이 자신의 라이브러리 버전을 독립적으로 가질 수 있도록
+// 이 역전이 잘못되면:
 
-    private final String classPath;
+// 시나리오: WebApp A가 com.example.Foo를 CL_A로 로드
+//          WebApp B가 com.example.Foo를 CL_B로 로드
+// WebApp A의 Foo 인스턴스를 WebApp B에 전달하면:
+Object fooFromA = ...; // CL_A가 로드한 Foo 인스턴스
+com.example.Foo casted = (com.example.Foo) fooFromA;
+// → ClassCastException: com.example.Foo cannot be cast to com.example.Foo
+// 이름은 같지만 다른 CL이 로드한 클래스 = JVM 입장에서 다른 타입
+```
 
-    public CustomClassLoader(String classPath) {
-        this.classPath = classPath;
+### 3.8 커스텀 클래스 로더 — 실전 구현
+
+```java
+// 암호화된 .class 파일을 복호화해서 로드하는 커스텀 클래스 로더
+public class SecureClassLoader extends ClassLoader {
+
+    private final Path classDir;
+    private final SecretKey decryptKey;
+
+    public SecureClassLoader(Path classDir, SecretKey key, ClassLoader parent) {
+        super(parent); // 부모 위임 유지
+        this.classDir = classDir;
+        this.decryptKey = key;
     }
 
     @Override
     protected Class<?> findClass(String name) throws ClassNotFoundException {
-        byte[] classData = loadClassData(name);
-        if (classData == null) {
-            throw new ClassNotFoundException("클래스를 찾을 수 없습니다: " + name);
+        // 부모가 못 찾은 경우에만 여기 도달
+        Path classFile = classDir.resolve(name.replace('.', '/') + ".class.enc");
+        if (!Files.exists(classFile)) {
+            throw new ClassNotFoundException(name);
         }
-        // 바이트 배열을 Class 객체로 변환 — 이 시점에 Linking까지 진행
-        return defineClass(name, classData, 0, classData.length);
+        try {
+            byte[] encrypted = Files.readAllBytes(classFile);
+            byte[] classBytes = decrypt(encrypted, decryptKey); // AES 복호화
+            // defineClass = Verification + Preparation + 일부 Resolution 수행
+            return defineClass(name, classBytes, 0, classBytes.length);
+        } catch (Exception e) {
+            throw new ClassNotFoundException("복호화 실패: " + name, e);
+        }
     }
 
-    private byte[] loadClassData(String className) {
-        String fileName = classPath + "/" + className.replace('.', '/') + ".class";
-        try (InputStream is = new FileInputStream(fileName)) {
-            return is.readAllBytes();
-        } catch (IOException e) {
-            return null;
-        }
+    // 사용: 이 CL로 로드한 클래스는 외부에서 .class 파일을 훔쳐도 실행 불가
+    public static void main(String[] args) throws Exception {
+        SecretKey key = loadKey("/secure/app.key");
+        SecureClassLoader cl = new SecureClassLoader(Path.of("/encrypted"), key,
+                                                      ClassLoader.getSystemClassLoader());
+        Class<?> mainClass = cl.loadClass("com.example.SecureMain");
+        mainClass.getMethod("run").invoke(null);
     }
 }
 ```
 
-**커스텀 클래스 로더 실제 활용 사례:**
-- Tomcat, Spring Boot: 웹 애플리케이션별 클래스 격리 (다른 버전의 라이브러리 공존)
-- Eclipse/IntelliJ 플러그인 시스템: 플러그인별 독립 클래스 공간
-- 핫 리로딩: 개발 중 코드 변경 즉시 반영 (devtools)
-- 암호화된 `.class` 파일: 복호화 후 `defineClass`로 로드 (DRM)
+**커스텀 클래스 로더 활용 사례**:
+- **Tomcat**: WebApp별 독립 클래스 공간 (다른 버전의 Jackson 공존)
+- **Spring Boot DevTools**: 핫 리로딩 (`RestartClassLoader`)
+- **OSGi**: 번들별 클래스 격리
+- **게임 엔진**: 플러그인 동적 로드/언로드
+- **DRM**: 암호화된 바이트코드 보호
 
 ---
 
-## 4. Runtime Data Area (메모리 구조) — 공장의 창고 시스템
-
-### 비유: 사무실 공간 배치
-
-JVM 메모리는 회사 사무실과 같습니다.
-- **공용 회의실(Method Area/Heap)**: 모든 직원(스레드)이 공유
-- **개인 책상(JVM Stack)**: 직원(스레드)마다 독립적
-- **포스트잇(PC Register)**: "나 지금 몇 페이지 읽고 있었지?" 기록
-- **외부 전화기(Native Method Stack)**: OS와 통화할 때만 사용
+## 4. Runtime Data Areas — 메모리 구조 해부
 
 ```mermaid
-flowchart LR
-    MA["Method Area"] --- HP["Heap"]
-    ST["JVM Stack"] --- PC["PC Register"]
-    PC --- NS["Native Method Stack"]
+graph LR
+    MA["Method Area (공유)"] --- HP["Heap (공유)"]
+    ST["JVM Stack (스레드별)"] --- PC["PC Register (스레드별)"]
+    PC --- NS["Native Stack (스레드별)"]
 ```
 
-### 4.1 Method Area (메서드 영역) — "클래스 설계도 보관소"
+### 4.1 Method Area — 클래스 메타데이터 저장소
 
-비유: 건축 사무소의 설계도 파일 캐비닛입니다. 실제 건물(객체)이 만들어지기 전에, 설계도(클래스 정보)를 보관합니다. 모든 직원이 공유하는 캐비닛이므로 동시 접근 시 락 관리가 필요합니다.
-
-**모든 스레드가 공유하는 영역**입니다. 클래스 수준의 데이터를 저장합니다.
+모든 스레드가 공유하는 영역으로 클래스 수준 데이터를 저장합니다.
 
 저장 내용:
-- **클래스 메타데이터**: 클래스 이름, 부모 클래스, 구현한 인터페이스, 메서드/필드 정보
-- **런타임 상수풀(Runtime Constant Pool)**: `"Hello"` 같은 문자열 리터럴, 클래스/메서드 참조
-- **static 변수**: `static int count = 0` 같은 클래스 수준 변수
-- **메서드 바이트코드**: 각 메서드의 실제 JVM 명령어 시퀀스
+- **클래스 메타데이터**: 클래스/인터페이스 이름, 부모 클래스, 구현 인터페이스, 접근 제어자
+- **런타임 상수풀(Runtime Constant Pool)**: 컴파일 타임 상수, 심볼릭 참조 → 실제 참조로 교체됨
+- **메서드 바이트코드**: 각 메서드의 JVM 명령어 시퀀스
+- **static 필드**: 클래스 수준 변수
 
-#### PermGen → Metaspace 전환의 내부 원리
+#### PermGen → Metaspace 전환 — WHY
 
-**Java 7 이하 (PermGen)**: Heap과 같은 JVM 관리 메모리. 크기가 고정(`-XX:MaxPermSize`).
+**Java 7 이하 (PermGen)**: JVM이 관리하는 힙의 일부로, 크기가 고정되었습니다.
 
 ```
+Java 7 이하 메모리 레이아웃:
 [ JVM Heap ]
-┌────────────┬──────────────────┬──────────────────┐
-│  Young Gen │    Old Gen       │    PermGen        │
-│            │                  │  (고정 크기)      │
-└────────────┴──────────────────┴──────────────────┘
+┌──────────┬──────────┬──────────┐
+│ Young Gen│  Old Gen │  PermGen │  ← 고정 크기, OOM 잦음
+└──────────┴──────────┴──────────┘
 ```
 
-**Java 8 이후 (Metaspace)**: OS의 Native Memory 직접 사용. 기본적으로 자동 확장.
+**Java 8 이후 (Metaspace)**: OS 네이티브 메모리 직접 사용, 기본적으로 자동 확장.
 
 ```
-[ JVM Heap ]                  [ Native Memory ]
-┌────────────┬──────────────┐  ┌───────────────────┐
-│  Young Gen │    Old Gen   │  │    Metaspace       │
-│            │              │  │  (동적 확장 가능)  │
-└────────────┴──────────────┘  └───────────────────┘
+Java 8+ 메모리 레이아웃:
+[ JVM 관리 Heap ]        [ OS Native Memory ]
+┌──────────┬──────────┐  ┌──────────────────┐
+│ Young Gen│  Old Gen │  │    Metaspace      │  ← 동적 확장
+└──────────┴──────────┘  └──────────────────┘
 ```
 
-**왜 바꿨는가?** PermGen 시절 가장 많이 본 에러가 `OutOfMemoryError: PermGen space`였습니다. 원인은 보통 세 가지:
-1. Spring 같은 프레임워크가 동적으로 클래스를 많이 생성
-2. Tomcat에서 웹앱을 재배포할 때 클래스 로더가 제대로 GC되지 않음
-3. 개발자가 적절한 `-XX:MaxPermSize`를 설정하지 않음
-
-Metaspace는 OS 메모리를 직접 써서 "필요한 만큼 늘어난다"는 문제를 해결했습니다.
-
-**그런데 새로운 위험**: `-XX:MaxMetaspaceSize`를 설정하지 않으면 Metaspace가 OS 전체 메모리를 다 먹을 수 있습니다. 특히 리플렉션, 바이트코드 조작 프레임워크(ASM, ByteBuddy), 동적 프록시(Spring AOP, Hibernate)를 많이 쓰는 애플리케이션에서 클래스 로더 누수가 발생하면 Metaspace OOM이 천천히 진행됩니다.
+**이전하게 된 실제 이유**: `OutOfMemoryError: PermGen space`가 가장 많이 발생하는 OOM이었습니다. Spring Framework, Hibernate, Mockito 같은 라이브러리들이 동적 프록시 클래스를 대량 생성하는데, Tomcat 웹앱 재배포 시 이전 ClassLoader가 GC되지 않으면 PermGen이 점진적으로 가득 찼습니다.
 
 ```bash
-# Metaspace 설정 예시 — 운영 환경에서는 반드시 상한선 설정
--XX:MetaspaceSize=256m        # 초기 크기 (이 값 초과 시 GC 트리거)
--XX:MaxMetaspaceSize=512m     # 최대 크기 (설정 안 하면 무제한 — 위험!)
+# Metaspace 운영 설정 (반드시 상한선 설정!)
+-XX:MetaspaceSize=256m      # 초기 크기 (이 값 넘으면 GC 트리거)
+-XX:MaxMetaspaceSize=512m   # 상한선 (안 설정하면 OS 메모리 전부 소비 가능!)
 ```
 
-### 4.2 Heap (힙) — "모든 객체가 사는 도시"
-
-비유: Heap은 아파트 단지입니다. 새로 태어난 주민(객체)은 신도시(Young Gen)에 배정되고, 오래 살아남은 주민은 구도심(Old Gen)으로 이사 갑니다. 청소팀(GC)은 주기적으로 빈 집을 정리합니다.
-
-**가장 큰 메모리 영역**으로, `new` 키워드로 생성되는 모든 객체와 배열이 저장됩니다. 모든 스레드가 공유합니다.
-
-#### 힙 구조 (HotSpot JVM 기준)
-
-```
-┌─────────────────────────────────────────────────────┐
-│                      Heap                           │
-├─────────────────────────────┬───────────────────────┤
-│        Young Generation     │    Old Generation      │
-├──────────┬────────┬─────────┤    (Tenured Space)     │
-│  Eden    │   S0   │   S1    │  오래 살아남은 객체    │
-│  Space   │(Survivor)│(Survivor)│  (age >= 15)       │
-│ 새 객체  │살아남은 │  대기   │                       │
-└──────────┴────────┴─────────┴───────────────────────┘
-```
-
-**Young Generation의 내부 동작 원리:**
-
-새 객체는 **TLAB(Thread-Local Allocation Buffer)**를 통해 Eden에 할당됩니다. TLAB이란 스레드마다 Eden의 일부를 미리 예약해두는 공간으로, 멀티스레드 환경에서 할당 시 락 경합 없이 빠르게 객체를 생성할 수 있게 해줍니다.
-
-**S0과 S1 중 하나는 항상 비어있는 이유**: GC는 살아남은 객체를 비어있는 Survivor로 복사(Copy 알고리즘)합니다. 이후 원래 Survivor를 통째로 비웁니다. 이렇게 하면 메모리 단편화(fragmentation) 없이 연속된 공간을 유지할 수 있습니다.
-
-**만약 Survivor 공간이 없다면?** Eden에서 살아남은 객체를 Old Gen으로 바로 올려야 합니다. Old Gen GC는 훨씬 느리므로, 전체 GC 빈도가 폭발적으로 늘어납니다.
-
-#### 힙 크기 설정
+**Metaspace 누수 진단**:
 
 ```bash
-# 힙 초기/최대 크기 (운영 환경에서는 동일하게 설정해 리사이즈 오버헤드 제거)
--Xms2g          # 힙 초기 크기 2GB
--Xmx4g          # 힙 최대 크기 4GB
-
-# Young Generation 크기
--Xmn1g          # Young Gen 고정 크기 1GB
--XX:NewRatio=2  # Old:Young = 2:1 비율 (Young = 전체의 1/3)
-
-# Survivor 비율
--XX:SurvivorRatio=8  # Eden:S0:S1 = 8:1:1
-
-# 객체가 Old Gen으로 이동하는 기준 (Minor GC 생존 횟수)
--XX:MaxTenuringThreshold=15
+# Metaspace 사용량 모니터링
+jstat -gcmetacapacity <pid>
+# 또는 JFR로 클래스 로딩 이벤트 추적
+jcmd <pid> JFR.start duration=60s filename=meta.jfr
+jfr print --events ClassLoad meta.jfr | grep "ClassLoader"
 ```
 
-#### 객체 할당 및 GC 트리거 흐름
+### 4.2 Heap — 객체의 거주지
 
-```mermaid
-graph LR
-    A["new 객체"] --> B{"Eden 여유?"}
-    B -->|Yes| C["Eden 할당"]
-    B -->|No| D["Minor GC"]
-    D --> F{"age >= threshold?"}
-    F -->|Yes| H["Old Gen"]
-    F -->|No| I["Survivor"]
-```
+모든 `new` 키워드로 생성된 객체와 배열이 저장됩니다. 모든 스레드가 공유합니다.
 
-### 4.3 JVM Stack (스택) — "스레드의 실행 일지"
-
-비유: JVM Stack은 요리사의 작업 메모장입니다. 새 요리(메서드 호출)를 시작하면 새 페이지를 펼치고(스택 프레임 push), 요리가 끝나면 그 페이지를 찢어버립니다(스택 프레임 pop). 요리사마다 메모장이 따로 있습니다(스레드마다 독립).
-
-**스레드마다 독립적으로 생성**됩니다. 메서드 호출 시 **스택 프레임(Stack Frame)**이 push되고, 메서드가 종료되면 pop됩니다.
-
-#### 스택 프레임의 내부 구조
+#### 힙 구조와 객체 수명 주기
 
 ```
-┌─────────────────────────────────┐
-│          Stack Frame            │
-├─────────────────────────────────┤
-│    Local Variable Array         │  ← 지역변수, 매개변수, this 참조
-│    [0]=this, [1]=arg1, [2]=x    │
-├─────────────────────────────────┤
-│    Operand Stack                │  ← 연산을 위한 임시 저장 (CPU 레지스터 대신)
-│    LIFO 구조                    │
-├─────────────────────────────────┤
-│    Frame Data                   │  ← 상수풀 참조, 예외처리 테이블, 반환 주소
-└─────────────────────────────────┘
+[ Heap ]
+┌─────────────────────────────┬───────────────────────────┐
+│      Young Generation       │      Old Generation        │
+├──────────┬────────┬─────────┤   (Tenured Space)          │
+│  Eden    │ Surv0  │ Surv1   │  수명이 긴 객체 (age≥15)   │
+│  (새 객체│        │         │                            │
+│  TLAB)   │        │         │                            │
+└──────────┴────────┴─────────┴───────────────────────────┘
 ```
 
-**오퍼랜드 스택이 왜 필요한가?** JVM은 레지스터 기반이 아닌 **스택 기반** 아키텍처입니다. CPU 레지스터를 직접 사용하지 않고 스택에서 값을 pop/push하며 연산합니다. 이렇게 하면 CPU 아키텍처에 독립적인 바이트코드를 만들 수 있습니다.
+**TLAB(Thread-Local Allocation Buffer) — 왜 존재하는가?**
 
-실제 바이트코드 예시: `int result = a + b`
-
-```
-1. iload_1  → 지역변수 배열 index 1 (변수 a)를 오퍼랜드 스택에 push
-2. iload_2  → 지역변수 배열 index 2 (변수 b)를 오퍼랜드 스택에 push
-3. iadd     → 스택에서 두 값 pop → 더함 → 결과를 스택에 push
-4. istore_3 → 스택에서 결과 pop → 지역변수 배열 index 3에 저장
-```
-
-#### StackOverflowError의 메커니즘
-
-```bash
--Xss512k    # 스레드당 스택 크기 512KB (기본값: 512KB~1MB)
-```
-
-스택 프레임은 호출마다 쌓입니다. 재귀 호출이 끝없이 계속되면 스택이 꽉 차서 `StackOverflowError`가 발생합니다.
+멀티스레드 환경에서 모든 스레드가 Eden의 포인터를 동시에 업데이트하면 CAS(Compare-And-Swap) 경합이 발생합니다. TLAB은 각 스레드에게 Eden 일부를 미리 예약해줍니다. 스레드는 자신의 TLAB 안에서 락 없이 객체를 할당합니다.
 
 ```java
-// StackOverflowError 시나리오 — 탈출 조건 없는 무한 재귀
-public int factorial(int n) {
-    return n * factorial(n - 1); // n=0이 되도 멈추지 않음 → 스택 꽉 참
+// TLAB 할당 내부 의사코드 (실제로는 JVM 내부에서 처리)
+// 각 스레드의 TLAB 포인터를 단순 포인터 범핑으로 증가
+// ptr += objectSize  ← 이게 전부. CAS도 락도 없음
+// TLAB이 꽉 차면 새 TLAB 요청 (이 때만 Eden 전역 락 획득)
+```
+
+**Survivor 영역이 2개인 이유**:
+
+Minor GC는 Copy 알고리즘을 사용합니다. 살아있는 객체를 From-Survivor에서 To-Survivor로 복사하고, From-Survivor를 통째로 비웁니다. 이 과정이 끝나면 역할이 바뀝니다. Copy 알고리즘의 장점:
+- 단편화 없음: 복사 후 연속된 메모리 공간 확보
+- 빠름: 대부분 객체가 죽으므로 소수만 복사하면 됨
+
+```bash
+# 힙 설정 (운영 환경 권장)
+-Xms4g -Xmx4g          # 초기=최대 동일 설정 (리사이즈 오버헤드 제거)
+-XX:NewRatio=2          # Old:Young = 2:1
+-XX:SurvivorRatio=8     # Eden:S0:S1 = 8:1:1
+-XX:MaxTenuringThreshold=15  # Old Gen 승격 임계값
+```
+
+**객체 수명 추적**:
+
+```java
+// 수명이 짧은 객체 (이상적) - Minor GC에서 즉시 회수
+void processRequest(HttpRequest req) {
+    String body = req.getBody();  // 요청 처리 후 GC 대상
+    Map<String, String> params = parseParams(body);  // 역시 단명
+    // 메서드 종료 → 참조 끊김 → 다음 Minor GC에서 회수
+}
+
+// 수명이 긴 객체 (캐시) - Old Gen으로 승격
+public class UserCache {
+    private static final Map<Long, User> cache = new ConcurrentHashMap<>();
+    // static → GC Root 참조 → Minor GC 생존 반복 → Old Gen 승격
+    // Old Gen GC는 훨씬 느림 → 캐시 남용 = GC 부담 증가
 }
 ```
 
-**스택 크기 설정의 트레이드오프**: `-Xss`를 크게 잡으면 깊은 재귀에 안전하지만, 스레드 10,000개를 만들면 그만큼 메모리를 더 씁니다. Virtual Thread(Java 21)는 이 문제를 다르게 해결합니다 — 스택이 힙에서 동적으로 관리됩니다.
+### 4.3 JVM Stack — 스레드 실행 기록
 
-### 4.4 PC Register (프로그램 카운터 레지스터) — "북마크"
+스레드마다 독립적으로 생성됩니다. 메서드 호출 시 Stack Frame이 push되고 메서드 종료 시 pop됩니다.
 
-비유: 두꺼운 책을 읽다가 잠깐 쉬러 갈 때 책갈피를 꽂아두는 것과 같습니다. 컨텍스트 스위칭 후 "어디까지 읽었더라?"를 알기 위한 기록입니다.
+#### Stack Frame 내부 구조 완전 해부
 
-**스레드마다 독립적으로 생성**됩니다. 현재 실행 중인 JVM 명령어(바이트코드)의 주소를 저장합니다.
+```
+┌─────────────────────────────────────┐
+│           Stack Frame               │
+├─────────────────────────────────────┤
+│  Local Variable Array               │
+│  [0]=this  [1]=name  [2]=age        │  ← 지역변수·매개변수·this
+│  [3]=result                         │
+├─────────────────────────────────────┤
+│  Operand Stack (LIFO)               │
+│  ┌──────┐                           │  ← JVM의 연산 레지스터
+│  │  42  │ ← top                     │
+│  └──────┘                           │
+├─────────────────────────────────────┤
+│  Frame Data                         │
+│  - Constant Pool Reference          │  ← 현재 클래스 상수풀 포인터
+│  - Exception Table                  │  ← try-catch 범위와 핸들러
+│  - Return Address                   │  ← 호출자의 다음 명령어 주소
+└─────────────────────────────────────┘
+```
 
-CPU의 PC 레지스터와 개념이 같지만, JVM 레벨에서 추상화된 것입니다. 멀티스레드 환경에서 스레드가 번갈아 실행될 때, 다시 내 차례가 됐을 때 정확히 이전 실행 지점부터 재개하기 위해 필요합니다.
+**로컬 변수 배열 — 왜 0번이 this인가?**
 
-- Java 메서드 실행 중: 현재 실행 중인 바이트코드 명령어 주소
-- Native 메서드 실행 중: undefined (Native Method가 자체적으로 관리)
-
-### 4.5 Native Method Stack — "외부 통화 전용 전화기"
-
-Java가 아닌 네이티브 코드(C, C++)를 실행할 때 사용하는 스택입니다. JNI(Java Native Interface)를 통해 네이티브 메서드가 호출될 때 사용됩니다.
-
-자주 쓰이는 곳:
-- `System.currentTimeMillis()` — OS 시스템 콜로 현재 시간 획득
-- `Object.hashCode()` — 기본 구현이 객체 주소 기반 네이티브 계산
-- JDBC 드라이버의 소켓 통신 — OS 소켓 API 직접 호출
-- `Thread.sleep()` — OS 스케줄러에게 직접 요청
-
-### 4.6 OOM 발생 시나리오별 원인과 해결 — 증상별 진단표
-
-OutOfMemoryError는 메모리 영역별로 원인이 다릅니다. "OOM 났다"는 말만 해서는 진단이 안 됩니다.
-
-| OOM 메시지 | 발생 영역 | 주요 원인 | 해결 방법 |
-|------------|-----------|-----------|-----------|
-| `Java heap space` | Heap | 객체 누수, 힙 너무 작음 | `-Xmx` 증가, 누수 분석 |
-| `GC overhead limit exceeded` | Heap | GC가 실행 시간의 98% 차지 | 힙 증가, 객체 생성 패턴 개선 |
-| `Metaspace` | Metaspace | 동적 클래스 과다 생성, 클래스 로더 누수 | `MaxMetaspaceSize` 증가, 로더 누수 확인 |
-| `unable to create new native thread` | Native Memory | 스레드 과다 생성 | 스레드 풀 사용, `-Xss` 감소 |
-| `Direct buffer memory` | Native Memory | NIO DirectByteBuffer 과다 | `MaxDirectMemorySize` 증가, 명시적 해제 |
-| `StackOverflowError` | Stack | 무한 재귀 | 재귀→반복 전환, `-Xss` 증가 |
+인스턴스 메서드의 바이트코드에서 `this`는 숨겨진 첫 번째 매개변수입니다. `invokevirtual` 명령어가 this를 index 0에 자동으로 배치합니다. static 메서드는 this가 없으므로 0번부터 매개변수가 시작합니다.
 
 ```java
-// 힙 OOM 시나리오 1: static 컬렉션에 계속 추가 (가장 흔한 메모리 누수)
-public class MemoryLeakExample {
-    // static 필드 = JVM 종료까지 GC 안 됨
-    private static final List<byte[]> leakList = new ArrayList<>();
+// 소스 코드
+public int add(int a, int b) {
+    int result = a + b;
+    return result;
+}
 
-    public void doSomething() {
-        leakList.add(new byte[1024 * 1024]);  // 1MB씩 쌓임, 해제 없음
+// 바이트코드 (javap -c -verbose)
+public int add(int, int);
+  descriptor: (II)I
+  Code:
+     0: iload_1        // 로컬변수[1] = a 를 오퍼랜드 스택에 push
+     1: iload_2        // 로컬변수[2] = b 를 오퍼랜드 스택에 push
+     2: iadd           // 스택에서 두 값 pop → 더함 → 결과 push
+     3: istore_3       // 오퍼랜드 스택 pop → 로컬변수[3] = result에 저장
+     4: iload_3        // result를 스택에 push
+     5: ireturn        // 스택 top 값을 반환값으로 호출자에게 전달
+  // 로컬변수: [0]=this, [1]=a, [2]=b, [3]=result
+```
+
+**오퍼랜드 스택이 CPU 레지스터 대신 존재하는 이유**:
+
+JVM은 레지스터 기반 아키텍처가 아닌 **스택 기반** 가상 머신입니다. CPU 레지스터 수와 이름은 아키텍처마다 다릅니다(x86: EAX/EBX, ARM: R0/R1, RISC-V: x1/x2). 스택 기반으로 추상화하면 어떤 CPU에서도 동일한 바이트코드가 실행됩니다. JIT 컴파일러가 나중에 이 스택 연산을 실제 CPU 레지스터 명령어로 변환합니다.
+
+**예외 처리 테이블 (Frame Data)**:
+
+```java
+// 소스
+try {
+    riskyOperation(); // PC 범위 [0, 10)
+} catch (IOException e) {
+    handle(e);        // 핸들러 주소 20
+}
+
+// 바이트코드 예외 테이블
+Exception table:
+   from    to  target type
+       0    10      20  Class java/io/IOException
+// "PC가 0~10 사이에 IOException 발생 시 PC=20으로 점프"
+```
+
+**StackOverflowError 내부 메커니즘**:
+
+```java
+// Stack 크기 설정
+// -Xss512k  : 스레드당 512KB (기본값 보통 512KB~1MB)
+
+// StackOverflow 재현
+public class SOEDemo {
+    static int depth = 0;
+    public static void recurse() {
+        depth++;
+        // 매 호출마다 Stack Frame 생성
+        // Frame 크기 = 로컬변수 배열 + 오퍼랜드 스택 + 프레임 데이터
+        recurse(); // Stack 한계 도달 시 StackOverflowError
     }
-}
 
-// 힙 OOM 시나리오 2: DB에서 수백만 건 한 번에 로드
-public void loadAllData() {
-    // findAll()은 결과 전체를 List로 메모리에 적재
-    List<Order> allOrders = orderRepository.findAll(); // 100만 건 = OOM
-
-    // 해결: 스트림/페이지 단위 처리
-    orderRepository.findAllByPage(page, size).forEach(this::process);
-}
-
-// Metaspace OOM 시나리오: URLClassLoader를 close() 없이 계속 생성
-public class ClassLoaderLeak {
-    void loadPlugin(URL[] urls) throws Exception {
-        URLClassLoader cl = new URLClassLoader(urls);
-        // ... 사용 후 cl.close() 호출 없음
-        // → 이 ClassLoader가 로드한 모든 클래스가 Metaspace에 잔류
-        // → Metaspace 점진적 증가 → OOM
-    }
-}
-```
-
----
-
-## 5. Execution Engine (실행 엔진) — 공장의 생산팀
-
-### 5.1 Interpreter (인터프리터) — "실시간 통역사"
-
-바이트코드를 **한 명령어씩** 읽어 해석하고 실행합니다.
-
-- **장점**: JVM 시작 직후 바로 실행 가능 (사전 컴파일 불필요)
-- **단점**: 같은 메서드를 1000번 호출해도 1000번 해석 → 느림
-
-비유: 외국 손님이 한국어로 말할 때마다 그 자리에서 즉시 통역하는 것과 같습니다. 매번 새로 통역하므로 빠르게 시작하지만 반복적인 내용도 매번 통역해야 합니다.
-
-### 5.2 JIT Compiler — 자세한 내용은 별도 포스트 참조
-
-JIT 컴파일러에 대한 심층 분석(C1/C2, Tiered Compilation, 인라이닝, 탈출 분석 등)은 [JVM JIT 컴파일러 완전 가이드](/java/2026-05-02-java-jit-compiler/) 포스트를 참고하세요.
-
-요약만 하면: 자주 실행되는 핫코드를 네이티브 기계어로 컴파일해두고 재사용하여, 인터프리터의 반복 해석 비용을 없앱니다.
-
-### 5.3 Garbage Collector — 다음 섹션에서 상세히
-
----
-
-## 6. Garbage Collection (가비지 컬렉션) — 공장 청소팀
-
-### 6.1 GC 기본 원리 — "살아있는 것을 추적한다"
-
-비유: GC는 아파트 관리사무소의 빈 집 점검 방식과 같습니다. 관리사무소에서 알고 있는 입주민 목록(GC Root)에서 시작해, 각 입주민의 가족/지인 관계를 따라가며 실제로 사는 집을 표시합니다. 표시되지 않은 집은 빈 집으로 판단해 철거합니다.
-
-GC는 **더 이상 참조되지 않는 객체**를 찾아 메모리를 회수합니다.
-
-#### GC Root — "출발점을 정해야 탐색이 가능하다"
-
-**GC Root**란 살아있음이 확실한 객체들의 집합입니다. 여기서 참조 그래프를 탐색해 닿을 수 있는 객체는 살아있다고 판단합니다.
-
-GC Root가 될 수 있는 것들:
-- JVM Stack의 지역변수/매개변수가 참조하는 객체 (실행 중인 메서드가 쓰는 객체)
-- Method Area의 static 변수가 참조하는 객체 (전역 상태)
-- JNI 참조로 유지되는 객체 (C/C++ 코드가 들고 있는 객체)
-- 활성 스레드 객체 자체
-
-**왜냐하면**: 참조 카운팅 방식(Swift, Python에서 사용)은 순환 참조를 처리하지 못합니다. A→B→A처럼 서로 참조하면 카운트가 0이 되지 않아 영원히 해제되지 않습니다. GC Root에서 탐색하는 방식(Mark and Sweep)은 순환 참조도 정확히 탐지합니다.
-
-#### Mark → Sweep → Compact 내부 동작
-
-```mermaid
-flowchart LR
-    A["1. Mark: GC Root부터"] --> B["2. Sweep: 미표시 제거"]
-    B --> C["3. Compact: 객체 압축"]
-```
-
-- **Mark**: GC Root에서 시작해 도달 가능한 객체에 표시. STW(Stop-The-World) 중 수행.
-- **Sweep**: 표시되지 않은 객체의 메모리 해제. 이 과정에서 메모리에 구멍이 생깁니다(단편화).
-- **Compact**: 살아있는 객체를 한쪽으로 모아 연속된 빈 공간을 만듭니다. 가장 비싼 연산.
-
-**STW(Stop-The-World)**: GC가 실행되는 동안 모든 애플리케이션 스레드가 멈추는 현상. "내 서버가 주기적으로 몇 초씩 응답 안 한다"의 직접 원인입니다.
-
-### 6.2 Minor GC vs Major GC vs Full GC — "동네 청소 vs 도시 전체 청소"
-
-| GC 종류 | 대상 영역 | 발생 조건 | STW 시간 |
-|---------|-----------|-----------|----------|
-| **Minor GC** | Young Generation | Eden이 꽉 찼을 때 | 짧음 (수 ms) |
-| **Major GC** | Old Generation | Old Gen이 부족할 때 | 길음 (수십 ms ~ 수 초) |
-| **Full GC** | Heap 전체 + Metaspace | Major GC 실패, `System.gc()` 등 | 매우 길음 (수 초 이상) |
-
-**Minor GC가 빠른 이유**: Young Gen은 대부분의 객체가 금방 죽는다(Weak Generational Hypothesis)는 가정을 기반으로 설계됐습니다. 짧게 살다 죽는 객체가 대부분이므로, 살아남은 소수의 객체만 복사하면 됩니다. Copy 알고리즘은 단편화도 없고 빠릅니다.
-
-**Full GC 시나리오와 방지법**:
-
-```java
-// Full GC를 유발하는 코드 패턴들
-
-// 1. System.gc() 직접 호출 — 절대 하지 말 것
-System.gc();  // 동작이 보장되지도 않고 Full GC를 강제할 수 있음
-
-// 2. 큰 객체를 대량 생성 (Humongous 객체 → Old Gen 직행)
-byte[] bigArray = new byte[20 * 1024 * 1024];  // 20MB → Old Gen 직행
-
-// 3. Old Gen이 천천히 채워지는 경우 — 장기 캐시 누수
-// static Map에 계속 추가하면 Minor GC 때마다 Old Gen으로 이동
-// Old Gen이 꽉 차면 Major/Full GC 발생
-```
-
-#### Minor GC 동작 상세
-
-```mermaid
-graph LR
-    A["Eden 가득"] --> B["Minor GC"]
-    B --> E{"age >= threshold?"}
-    E -->|Yes| F["Old Gen"]
-    E -->|No| G["Survivor 이동"]
-    G --> J["GC 종료"]
-```
-
-### 6.3 GC 알고리즘 — 시대별 진화 과정
-
-#### Serial GC — "혼자 다 하는 청소부"
-
-```bash
--XX:+UseSerialGC
-```
-
-단일 스레드로 GC를 수행합니다. STW 동안 애플리케이션은 완전히 멈추고 GC 스레드 하나만 돌아갑니다.
-
-- Young Gen: Copy 알고리즘 (단편화 없음)
-- Old Gen: Mark-Sweep-Compact (느리지만 단편화 해소)
-
-**언제 쓰는가**: 클라이언트 머신, 테스트 환경, CPU가 1개인 컨테이너. 단일 프로세스로 GC 스레드를 추가하는 오버헤드가 없으므로 아주 작은 힙에서는 오히려 빠를 수 있습니다.
-
-**서버에서 쓰면 안 되는 이유**: 100ms짜리 GC가 단일 스레드로 처리되면, 멀티코어 CPU가 있어도 다른 코어는 놀고 있습니다. 그 시간이 전부 레이턴시 스파이크로 나타납니다.
-
-#### Parallel GC (Throughput Collector) — "여러 청소부가 동시에"
-
-```bash
--XX:+UseParallelGC
--XX:ParallelGCThreads=4  # GC 스레드 수 (기본: CPU 코어 수에 따라 자동)
-```
-
-여러 스레드로 GC를 병렬 수행합니다. STW는 여전히 발생하지만 CPU 코어를 모두 활용하므로 더 빠릅니다.
-
-**처리량(Throughput) 극대화**가 목표입니다. 즉, GC 총 시간을 줄여서 애플리케이션 실행 시간 비율을 높이는 것이 목적입니다.
-
-- Java 8 이하의 기본 GC 알고리즘
-- 배치 처리, 과학 계산 등 응답 시간보다 처리량이 중요한 경우 적합
-
-**만약 웹 서버에서 Parallel GC를 쓰면?** 배치가 아닌 요청/응답 환경에서는 GC 중 몇 초씩 레이턴시 스파이크가 발생합니다. "가끔씩 서버가 멈추는 것 같다"는 클레임의 원인입니다.
-
-#### CMS (Concurrent Mark Sweep) GC — "청소하면서 영업도 하는"
-
-```bash
--XX:+UseConcMarkSweepGC
--XX:CMSInitiatingOccupancyFraction=75  # Old Gen 75% 찼을 때 시작
-```
-
-Old Gen GC의 대부분을 **애플리케이션 스레드와 동시에** 수행합니다. STW를 최소화하는 저지연 목표 GC입니다.
-
-**CMS 동작 단계의 내부 원리**:
-
-1. **Initial Mark** (STW, 매우 짧음): GC Root에서 직접 참조하는 객체만 표시. "첫 번째 홉만 확인"이므로 빠름.
-2. **Concurrent Mark** (Concurrent): 애플리케이션과 동시에 나머지 참조 그래프 탐색. 이 사이에 새 객체 생성/수정 가능.
-3. **Concurrent Preclean** (Concurrent): 2단계 중 변경된 객체 선별 정리.
-4. **Remark** (STW): Concurrent Mark 중 놓친 객체 재표시. 짧지만 STW 발생.
-5. **Concurrent Sweep** (Concurrent): 애플리케이션과 동시에 메모리 해제.
-6. **Concurrent Reset** (Concurrent): 다음 CMS 사이클 준비.
-
-**CMS의 치명적 단점**:
-- **Compact 없음**: Sweep만 하므로 메모리 단편화가 계속 쌓입니다.
-- **단편화 누적 → Full GC**: 결국 연속된 공간이 없어 큰 객체 할당 실패 → Serial Full GC로 폴백 → 수 초짜리 STW.
-- **Concurrent Mode Failure**: CMS가 진행 중인데 Old Gen이 꽉 차버리면 긴급 Serial GC 발동.
-
-**왜 삭제됐는가**: 위 단점들로 인해 Java 9에서 Deprecated, Java 14에서 완전 제거됐습니다. 대안은 G1 GC입니다.
-
-#### G1 GC (Garbage First) — "쓰레기 많은 곳부터 청소한다"
-
-```bash
--XX:+UseG1GC          # Java 9+부터 기본값
--Xms4g -Xmx4g
--XX:G1HeapRegionSize=16m     # Region 크기 (1~32MB, 2의 거듭제곱)
--XX:MaxGCPauseMillis=200     # 목표 최대 STW 시간 (ms) — 보장은 아님, 목표
--XX:InitiatingHeapOccupancyPercent=45  # Old Gen GC 시작 임계값
-```
-
-**G1의 핵심 아이디어 — Region 기반 힙**:
-
-비유: 기존 GC는 "도시의 특정 구역(Young/Old Gen) 전체를 청소한다"는 방식이었습니다. G1은 "도시를 동일한 크기의 블록으로 나누고, 쓰레기가 가장 많은 블록부터 청소한다"는 방식입니다. 이름 그대로 **Garbage First(쓰레기 먼저)** 입니다.
-
-```
-힙을 동일한 크기의 Region으로 분할 (예: 1MB ~ 32MB)
-┌───┬───┬───┬───┬───┬───┬───┬───┐
-│ E │ E │ S │ O │ E │ H │ O │ E │
-├───┼───┼───┼───┼───┼───┼───┼───┤
-│ O │ F │ E │ O │ S │ E │ O │ F │
-└───┴───┴───┴───┴───┴───┴───┴───┘
-E=Eden, S=Survivor, O=Old, H=Humongous, F=Free
-각 Region의 역할은 동적으로 변함
-```
-
-**G1 GC 동작 단계의 내부 원리**:
-
-1. **Young GC (Evacuation Pause, STW)**: Eden Region이 꽉 차면 실행. 살아있는 객체를 Survivor Region으로 이동. 기존 Eden Region은 즉시 Free가 됨. 이것이 G1의 "Compact가 내장된" 핵심입니다.
-
-2. **Concurrent Marking Cycle**: Old Gen 점유율이 IHOP(45%) 초과 시 시작.
-   - Initial Mark: GC Root 표시 (STW, Young GC와 함께 실행)
-   - Concurrent Mark: 전체 힙 참조 그래프 탐색 (애플리케이션과 동시)
-   - Remark: 놓친 객체 보완 (STW, 짧음)
-   - Cleanup: 완전히 빈 Region 즉시 회수 (STW, 짧음) + 다음 Mixed GC 대상 선정
-
-3. **Mixed GC**: Young Region + **쓰레기가 많은 Old Region** 동시 수거. 여기서 "Garbage First"가 동작합니다. 쓰레기 비율이 높은 Region부터 골라 처리하므로 효율적입니다.
-
-4. **Full GC (폴백)**: 힙이 너무 빨리 채워지면 G1이 처리를 포기하고 Serial Full GC 실행. 반드시 피해야 합니다. 로그에 `"Pause Full (G1 Evacuation Pause)"` 가 보이면 조치 필요.
-
-**Humongous Region**: Region 크기의 50% 이상인 큰 객체는 직접 Old Region 여러 개에 연속 할당(Humongous 객체). 큰 배열, 큰 String이 해당.
-
-**만약 MaxGCPauseMillis를 너무 작게 잡으면?** G1이 목표를 달성하기 위해 GC를 더 자주 실행합니다. GC 빈도가 높아져 처리량(Throughput)이 감소합니다. 200ms 정도가 일반적인 출발점입니다.
-
-```bash
-# G1 GC 실전 튜닝
--XX:MaxGCPauseMillis=200           # STW 목표 (너무 작게 잡으면 GC 빈도 증가)
--XX:G1HeapRegionSize=32m           # 큰 객체가 많으면 Region 크기 키워 Humongous 방지
--XX:ConcGCThreads=4                # Concurrent 단계 GC 스레드 수 (CPU 코어의 1/4 권장)
--XX:G1MixedGCLiveThresholdPercent=65  # 살아있는 객체가 65% 이하인 Region만 Mixed GC 대상
-```
-
-#### ZGC (Z Garbage Collector) — "STW 1ms 이하, 힙 크기 무관"
-
-```bash
--XX:+UseZGC              # Java 11+, Java 15부터 프로덕션 안정화
--Xms16g -Xmx16g
-```
-
-**ZGC의 목표**: 힙이 GB든 TB든 **STW 시간을 1ms 이하로 유지**.
-
-이게 어떻게 가능한가? 두 가지 핵심 기술:
-
-**① Colored Pointers (착색 포인터)**
-
-비유: 물류 창고에서 박스 주소 라벨에 "이동 중", "검사 완료" 같은 색깔 스티커를 붙이는 것과 같습니다.
-
-64bit 포인터에서 실제 주소에는 42~44비트면 충분합니다. ZGC는 남는 비트에 GC 상태 정보를 인코딩합니다.
-
-```
-64-bit 포인터 구조 (ZGC)
-bit 63..46: 미사용
-bit 45:     Remapped  (이미 재배치 완료)
-bit 44:     Marked1   (GC 사이클 1에서 살아있음)
-bit 43:     Marked0   (GC 사이클 0에서 살아있음)
-bit 42:     Finalizable (finalize 필요)
-bit 41..0:  실제 객체 주소
-```
-
-**② Load Barriers (읽기 배리어)**
-
-비유: 창고에서 물건을 꺼낼 때마다 "이 물건 현재 위치 맞나?" 라벨을 확인하는 직원처럼.
-
-객체를 참조할 때마다 JIT 컴파일러가 삽입한 작은 코드가 "이 포인터가 현재 유효한가?"를 확인합니다. 객체가 이동 중이라면 새 위치로 포인터를 업데이트합니다. 이 덕분에 객체 이동을 애플리케이션 실행과 동시에(Concurrent) 진행할 수 있습니다.
-
-```
-ZGC STW 단계 — 세 번만, 각각 1ms 미만:
-1. Pause Mark Start: GC Root 표시 시작
-2. Pause Mark End:   마킹 완료 확인
-3. Pause Relocate Start: 재배치 시작 선언
-
-나머지 모든 작업 (탐색, 이동, 참조 업데이트): Concurrent 수행
-```
-
-**ZGC 적합 환경**:
-- TB급 힙 (최대 4TB 지원)
-- 1ms 이하 응답 시간이 필요한 실시간 시스템
-- 금융 거래, 게임 서버, 실시간 데이터 분석
-
-**ZGC 단점**:
-- CPU 오버헤드 높음 (Load Barrier 삽입, Concurrent 작업)
-- 처리량(Throughput)이 G1보다 10~15% 낮을 수 있음
-- 64bit 시스템에서만 동작 (Colored Pointers가 64bit 전제)
-
-#### Shenandoah GC — "ZGC의 경쟁자, Red Hat 스타일"
-
-```bash
--XX:+UseShenandoahGC     # OpenJDK 12+, Red Hat 개발
-```
-
-ZGC와 비슷하게 STW 최소화가 목표지만 다른 접근 방식입니다.
-
-**Brooks Pointer**: 각 객체 앞에 "포워딩 포인터"를 하나 추가합니다. 객체가 이동하면 원래 위치의 포워딩 포인터만 업데이트합니다. ZGC의 Colored Pointer보다 단순하지만 오브젝트마다 1개 포인터 추가 비용이 있습니다.
-
-| 항목 | ZGC | Shenandoah |
-|------|-----|------------|
-| STW 목표 | < 1ms | < 10ms |
-| 최대 힙 | 4TB | 제한 없음 |
-| 핵심 기술 | Colored Pointers + Load Barrier | Brooks Pointer + Load/Store Barrier |
-| 개발사 | Oracle | Red Hat |
-| 추가 메모리 | 없음 | 오브젝트당 포인터 1개 |
-| 아키텍처 제한 | 64bit 전용 | 32bit도 가능 |
-
-### 6.4 GC 알고리즘 전체 비교
-
-| GC | Java 기본 버전 | STW | 처리량 | 지연시간 | 힙 크기 | 추천 환경 |
-|----|---------------|-----|--------|----------|---------|-----------|
-| Serial | - | 긴 STW | 낮음 | 나쁨 | 소형 | 클라이언트, 테스트 |
-| Parallel | Java 8 이하 | STW (짧음) | 높음 | 나쁨 | 중형 | 배치, 처리량 우선 |
-| CMS | 제거됨 (Java 14) | 짧은 STW | 중간 | 좋음 | 중형 | (레거시) |
-| G1 | Java 9+ | 짧은 STW | 높음 | 좋음 | 4GB~16GB | 일반 서버 앱 |
-| ZGC | Java 15+ | < 1ms | 중간 | 매우 좋음 | 1GB~4TB | 초저지연 |
-| Shenandoah | OpenJDK 12+ | < 10ms | 중간 | 좋음 | 제한 없음 | 저지연 |
-
-### 6.5 GC 선택 가이드
-
-```mermaid
-flowchart LR
-    A{"응답시간 최우선?"}
-    A -->|Yes| B{"힙 크기?"}
-    B -->|"< 4GB"| C["G1GC"]
-    B -->|"4~16GB"| D["G1GC or ZGC"]
-    B -->|"> 16GB"| E["ZGC / Shenandoah"]
-    A -->|No| F{"처리량 최우선?"}
-    F -->|Yes| G["Parallel GC"]
-    F -->|No| H["G1GC 기본값"]
-```
-
-### 6.6 GC 튜닝 주요 파라미터
-
-```bash
-# ===== G1 GC 기본 튜닝 (가장 많이 씀) =====
--XX:+UseG1GC
--Xms4g -Xmx4g                          # 힙 초기=최대 (리사이즈 오버헤드 제거)
--XX:MaxGCPauseMillis=200               # STW 목표 시간 (200ms 권장 시작점)
--XX:G1HeapRegionSize=16m               # Region 크기 (큰 객체 많으면 32m)
--XX:InitiatingHeapOccupancyPercent=45  # Concurrent Mark 시작 임계값
--XX:G1ReservePercent=15                # Old Gen 예비 공간
-
-# ===== GC 로그 설정 (Java 9+) — 반드시 활성화 =====
--Xlog:gc*:file=/var/log/app/gc.log:time,uptime,level,tags:filecount=10,filesize=100m
-
-# ===== OOM 발생 시 힙 덤프 자동 생성 — 운영에서 필수 =====
--XX:+HeapDumpOnOutOfMemoryError
--XX:HeapDumpPath=/var/log/app/heapdump.hprof
-
-# ===== 진단 옵션 =====
--XX:+PrintGCApplicationStoppedTime  # 실제 STW 시간 출력 (GC 외 STW도 포함)
--XX:+PrintAdaptiveSizePolicy        # Young/Old Gen 자동 조정 내역
--XX:+PrintTenuringDistribution      # 객체 age 분포 (Survivor 크기 튜닝 기준)
-```
-
----
-
-## 7. 트래픽별 JVM 설정
-
-### 7.1 소규모 서비스 (100 TPS 이하)
-
-**특성**: 동시 접속자 적음, 힙 요구량 적음, 기본 설정으로 충분
-
-```bash
-java -jar \
-  -Xms512m \                      # 힙 초기 크기 512MB
-  -Xmx1g \                        # 힙 최대 크기 1GB
-  -XX:+UseG1GC \                  # G1GC (Java 9+ 기본값)
-  -XX:MaxGCPauseMillis=250 \      # 250ms 이내 STW 목표
-  -Xlog:gc:file=/logs/gc.log \    # GC 로그
-  app.jar
-```
-
-**주의사항**: 힙을 너무 크게 잡으면 Full GC 시 오히려 STW가 길어집니다. 컨테이너 환경에서는 `-XX:+UseContainerSupport` (Java 8u191+ 기본 활성화) 확인. 이게 없으면 컨테이너 메모리 제한을 무시하고 호스트 전체 메모리를 기준으로 힙을 잡습니다.
-
-### 7.2 중규모 서비스 (1,000 ~ 10,000 TPS)
-
-**특성**: 동시 접속자 수백~수천, 힙 2~8GB, GC 로그 모니터링 필수
-
-```bash
-java -jar \
-  -Xms4g \                                    # 힙 초기=최대 (리사이즈 방지)
-  -Xmx4g \
-  -XX:+UseG1GC \
-  -XX:G1HeapRegionSize=16m \                  # Region 크기 16MB
-  -XX:MaxGCPauseMillis=200 \                  # 200ms 이내 STW 목표
-  -XX:InitiatingHeapOccupancyPercent=40 \     # Old Gen 40%에서 Concurrent Mark 시작
-  -XX:G1ReservePercent=15 \                   # 15% 예비 공간
-  -XX:ConcGCThreads=4 \                       # Concurrent GC 스레드 4개
-  -XX:+HeapDumpOnOutOfMemoryError \
-  -XX:HeapDumpPath=/logs/heapdump.hprof \
-  -Xlog:gc*:file=/logs/gc.log:time,uptime:filecount=10,filesize=50m \
-  app.jar
-```
-
-**모니터링 필수 지표**:
-- Minor GC 빈도 및 STW 시간 (목표: < 100ms)
-- Full GC 횟수 (목표: 0)
-- Old Gen 점유율 추이 (80% 넘으면 주의)
-- Metaspace 사용량 (무한 증가는 클래스 로더 누수 의심)
-
-### 7.3 대규모 서비스 (100,000 TPS 이상)
-
-**특성**: 응답 시간 SLA 엄격, 힙 16GB+, ZGC 또는 G1 극한 튜닝
-
-```bash
-java -jar \
-  -Xms16g \
-  -Xmx16g \
-  -XX:+UseZGC \                               # ZGC: 1ms 이하 STW 목표
-  -XX:ZCollectionInterval=1 \                 # 1초마다 GC 주기 실행
-  -XX:ConcGCThreads=8 \                       # Concurrent GC 스레드 8개
-  -XX:+ZProactive \                           # 미리 GC 수행 (여유 있을 때)
-  -XX:ZUncommitDelay=300 \                    # 미사용 메모리 OS 반환 300초 지연
-  -XX:+HeapDumpOnOutOfMemoryError \
-  -XX:HeapDumpPath=/logs/heapdump.hprof \
-  -Xlog:gc*:file=/logs/gc.log:time,uptime:filecount=20,filesize=100m \
-  app.jar
-```
-
-**추가 고려사항**:
-- **NUMA 지원**: `+UseNUMA` (멀티소켓 서버에서 메모리 지역성 향상)
-- **Large Pages**: `+UseLargePages` (TLB 캐시 효율 향상)
-- **코드 캐시**: `-XX:ReservedCodeCacheSize=512m` (JIT 컴파일 결과 저장 공간, 부족하면 JIT 중단됨)
-
----
-
-## 8. JVM 모니터링 & 트러블슈팅
-
-### 8.1 jstat — 실시간 GC 통계
-
-```bash
-# GC 통계를 1초마다 출력 (가장 빠른 진단)
-jstat -gcutil <pid> 1000
-
-# 출력 예시 (단위: %)
-# S0   S1    E    O    M   CCS  YGC  YGCT  FGC  FGCT   GCT
-#  0.0 12.3 45.2 32.1 95.2 92.3  123  2.456   1  0.234  2.690
-#
-# S0/S1: Survivor 사용률   E: Eden 사용률
-# O: Old Gen 사용률        M: Metaspace 사용률
-# YGC/YGCT: Young GC 횟수/누적시간  FGC/FGCT: Full GC 횟수/누적시간
-
-# 상세 통계 (KB 단위)
-jstat -gc <pid> 1000
-
-# JIT 컴파일 통계
-jstat -compiler <pid>
-```
-
-### 8.2 jmap — 힙 분석
-
-```bash
-# 힙 사용 현황 요약
-jmap -heap <pid>
-
-# 힙 히스토그램 — 어떤 타입이 메모리를 먹고 있나?
-jmap -histo:live <pid> | head -30
-
-# 힙 덤프 생성 (파일이 크므로 여유 디스크 공간 확인 필수)
-jmap -dump:live,format=b,file=/tmp/heap-live.hprof <pid>
-```
-
-### 8.3 jstack — 스레드 덤프
-
-```bash
-# 스레드 덤프 (데드락 포함)
-jstack -l <pid> > /tmp/threaddump.txt
-
-# 빠른 데드락 확인
-jstack <pid> | grep -A 20 "Found deadlock"
-```
-
-### 8.4 jcmd — 다목적 진단 (추천)
-
-```bash
-# 사용 가능한 진단 명령 목록
-jcmd <pid> help
-
-# 힙 덤프
-jcmd <pid> GC.heap_dump /tmp/heap.hprof
-
-# 스레드 덤프
-jcmd <pid> Thread.print
-
-# JVM 플래그 확인
-jcmd <pid> VM.flags
-
-# Native 메모리 추적 (Metaspace 누수 진단)
-jcmd <pid> VM.native_memory summary
-```
-
-### 8.5 힙 덤프 분석 — Eclipse MAT 활용
-
-힙 덤프는 특정 시점의 힙 메모리 스냅샷입니다. OOM 발생 원인 분석에 필수입니다.
-
-**MAT(Eclipse Memory Analyzer)에서 확인할 것:**
-1. **Leak Suspects**: 자동으로 메모리 누수 의심 항목을 분석해줌
-2. **Dominator Tree**: 메모리를 가장 많이 점유하는 객체 트리
-3. **Histogram**: 클래스별 인스턴스 수와 점유 메모리
-4. **OQL**: `SELECT * FROM java.util.ArrayList WHERE size > 10000` — 비정상적으로 큰 컬렉션 찾기
-
-### 8.6 OOM 디버깅 실전 5단계
-
-```bash
-# 1단계: OOM 발생 즉시 힙 덤프 확보 (시작 옵션으로 미리 설정)
--XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/logs/oom-dump.hprof
-
-# 2단계: jstat으로 Old Gen 추이 확인
-jstat -gcutil <pid> 1000 60  # 1초마다 60회 출력
-
-# 3단계: 힙 히스토그램 빠른 확인
-jmap -histo:live <pid> | head -20
-
-# 4단계: MAT로 힙 덤프 분석
-# Open Heap Dump → Leak Suspects Report → 가장 큰 리테이너 확인
-
-# 5단계: 코드에서 해당 클래스 생성 경로 추적
-# GC Roots to Object 기능으로 왜 GC 안 되는지 참조 체인 확인
-```
-
-**스레드 덤프 읽기 — 상태별 의미**:
-
-| 스레드 상태 | 의미 | 문제일 가능성 |
-|------------|------|--------------|
-| `RUNNABLE` | 실행 중 또는 실행 대기 | CPU 100%이면 무한루프 의심 |
-| `WAITING` | 무기한 대기 (`park()`, `wait()`) | 정상이면 스레드 풀 대기, 비정상이면 데드락 |
-| `TIMED_WAITING` | 시간 제한 대기 (`sleep`, `wait(timeout)`) | 보통 정상 |
-| `BLOCKED` | 모니터 락 획득 대기 | 락 경합 → 성능 저하 원인 |
-
----
-
-## 9. 실무에서 자주 하는 실수 TOP 5
-
-### 실수 1: 힙 크기를 너무 크게 설정
-
-```bash
-# 잘못된 예: 32GB 힙 → Full GC 발생 시 수십 초 STW
--Xmx32g
-
-# 올바른 접근: GC 알고리즘에 맞는 적절한 크기
--Xmx8g -XX:+UseG1GC -XX:MaxGCPauseMillis=200
-# GC가 STW 목표를 지킬 수 없으면 더 자주 실행해서 보완
-```
-
-**왜냐하면**: G1 GC도 Full GC로 폴백하면 힙 전체를 Serial로 스캔합니다. 힙이 32GB면 수십 초가 걸릴 수 있습니다.
-
-### 실수 2: -Xms와 -Xmx를 다르게 설정
-
-```bash
-# 잘못된 예: JVM이 힙을 512m에서 4g까지 리사이즈
--Xms512m -Xmx4g
-
-# 올바른 예: 운영 서버에서는 동일하게 설정
--Xms4g -Xmx4g  # 힙 리사이즈 비용 제거
-```
-
-힙 리사이즈 자체가 GC를 유발하고 STW를 발생시킵니다. 단, 개발/테스트 환경이나 메모리가 제한된 컨테이너에서는 다르게 설정할 수 있습니다.
-
-### 실수 3: static 컬렉션에 무제한 데이터 추가
-
-```java
-// 가장 흔한 메모리 누수 패턴
-public class CacheManager {
-    private static final Map<String, Object> cache = new HashMap<>();
-
-    public static void put(String key, Object value) {
-        cache.put(key, value);  // 추가만 하고 제거 없음 → 무한 증가 → OOM
-    }
-}
-
-// 해결: 크기 제한 캐시 사용
-private static final Map<String, Object> cache = Collections.synchronizedMap(
-    new LinkedHashMap<>(100, 0.75f, true) {
-        @Override
-        protected boolean removeEldestEntry(Map.Entry<String, Object> eldest) {
-            return size() > 100;  // 100개 초과 시 오래된 것 제거
+    public static void main(String[] args) {
+        try {
+            recurse();
+        } catch (StackOverflowError e) {
+            System.out.println("최대 재귀 깊이: " + depth); // 수천 수준
         }
     }
-);
-// 또는 Caffeine 캐시 사용 (maximumSize, expireAfterWrite 설정 가능)
-```
-
-### 실수 4: try-with-resources 미사용으로 리소스 누수
-
-```java
-// 잘못된 예: 예외 발생 시 InputStream이 영원히 닫히지 않음
-public void readFile(String path) throws IOException {
-    InputStream is = new FileInputStream(path);
-    processData(is);  // 여기서 예외 발생 시 is.close() 호출 안 됨
-    is.close();       // 도달하지 못함
 }
 
-// 올바른 예: try-with-resources 사용
-public void readFile(String path) throws IOException {
-    try (InputStream is = new FileInputStream(path)) {
-        processData(is);
-    }  // 예외 발생해도 자동으로 close() 호출됨
+// 해결: 재귀 → 반복문 + 명시적 스택 자료구조
+public static void iterativeProcess(Node root) {
+    Deque<Node> stack = new ArrayDeque<>();
+    stack.push(root);
+    while (!stack.isEmpty()) {
+        Node node = stack.pop();
+        process(node);
+        node.children().forEach(stack::push);
+    }
 }
 ```
 
-**만약 close()가 안 되면?** 파일 디스크립터(FD) 누수가 발생합니다. 리눅스 기본 FD 제한(1024)에 도달하면 `Too many open files` 에러가 발생하고 더 이상 파일/소켓을 열 수 없습니다.
+**Virtual Thread(Java 21)의 스택 혁신**: OS 스레드당 스택을 미리 할당하는 대신, Virtual Thread는 스택을 힙에 청크 단위로 동적 할당합니다. 블로킹 발생 시 스택 상태를 힙에 저장하고 OS 스레드를 반환합니다. 100만 개 Virtual Thread를 만들어도 메모리 문제가 없는 이유입니다.
 
-### 실수 5: finalize() 사용
+### 4.4 PC Register — 스레드의 책갈피
+
+스레드마다 독립적으로 생성됩니다. 현재 실행 중인 바이트코드 명령어의 주소를 저장합니다.
+
+컨텍스트 스위칭이 발생할 때(스레드 A → 스레드 B), OS 스케줄러가 스레드 A의 실행을 잠시 멈춥니다. 나중에 스레드 A가 다시 스케줄되면, PC Register의 주소에서 정확히 이어서 실행합니다. 이 PC Register가 없으면 "내가 어디까지 실행했더라?" 를 알 수 없어 처음부터 다시 시작해야 합니다.
+
+Native 메서드 실행 중에는 undefined입니다. Native 코드는 JVM이 아닌 OS 레벨에서 관리됩니다.
+
+### 4.5 Native Method Stack
+
+JNI(Java Native Interface)를 통해 C/C++ 네이티브 메서드를 호출할 때 사용되는 스택입니다.
 
 ```java
-// 잘못된 예: finalize()에 중요 로직 작성
-public class ResourceHolder {
-    @Override
-    protected void finalize() throws Throwable {
-        cleanup();  // GC 실행 전까지 호출 보장 안 됨, 순서도 보장 안 됨
-        // GC 성능 저하의 원인 (GC가 finalize 대상 객체를 별도로 추적해야 함)
+// JNI를 사용하는 실제 Java 메서드들
+public class NativeExamples {
+    // 이 메서드들은 내부적으로 Native Method Stack을 사용
+    public static native long currentTimeMillis();    // System.currentTimeMillis()
+    public static native void arraycopy(...);         // System.arraycopy()
+    public native int hashCode();                    // Object.hashCode() 기본 구현
+}
+
+// 직접 JNI 구현 예시
+public class FileIO {
+    static { System.loadLibrary("fileio"); } // libfileio.so 로드
+
+    public native byte[] readFileNative(String path); // Native Method Stack 사용
+
+    public static void main(String[] args) {
+        FileIO fio = new FileIO();
+        byte[] data = fio.readFileNative("/etc/hosts");
+    }
+}
+```
+
+---
+
+## 5. JIT 컴파일러 — 티어드 컴파일과 고급 최적화
+
+### 5.1 인터프리터의 한계와 JIT의 등장
+
+JVM은 처음에 바이트코드를 **인터프리터**로 한 줄씩 실행합니다. 빠르게 시작할 수 있지만 반복 실행이 느립니다.
+
+```
+인터프리터 실행 비용:
+매 invokevirtual마다 → 메서드 디스패치 테이블 조회 → 해당 바이트코드 해석 → 실행
+1000번 호출 = 위 과정 1000번 반복
+
+JIT 컴파일 이후:
+1000번 호출 감지 → 네이티브 기계어로 컴파일 → 이후 호출은 기계어 직접 실행
+→ 인터프리터 대비 10~100배 빠름
+```
+
+### 5.2 Tiered Compilation — C1 → C2 단계적 최적화
+
+HotSpot JVM의 **Tiered Compilation**(Java 8부터 기본 활성화)은 5단계로 동작합니다.
+
+| 티어 | 실행 방식 | 프로파일링 | 비고 |
+|------|-----------|-----------|------|
+| 0 | 인터프리터 | 전체 | 시작 직후 |
+| 1 | C1 컴파일 (단순) | 없음 | 최소 최적화, 빠른 컴파일 |
+| 2 | C1 컴파일 | 인보케이션·백엣지 카운터 | 경량 프로파일링 |
+| 3 | C1 컴파일 | 전체 프로파일 | 타입 정보, 분기 정보 수집 |
+| 4 | C2 컴파일 | 없음 (프로파일 기반 최적화) | 최고 최적화, 느린 컴파일 |
+
+```mermaid
+graph LR
+    T0["Tier 0: 인터프리터"] --> T3["Tier 3: C1 + 프로파일"]
+    T3 --> T4["Tier 4: C2 최적화"]
+    T3 --> T1["Tier 1: C1 단순"]
+```
+
+**왜 두 단계 컴파일러인가?**
+
+- **C1(Client Compiler)**: 빠르게 컴파일해 즉시 사용. 적극적 최적화 없음. JVM 워밍업 기간 단축.
+- **C2(Server Compiler)**: 충분한 프로파일 정보를 바탕으로 공격적 최적화. 컴파일에 시간이 걸리지만 결과물이 훨씬 빠름.
+
+C2가 활성화되기까지 시간이 걸리므로, 그 사이 C1으로 일단 빠른 코드를 실행합니다. 워밍업 전 성능과 최대 성능 사이의 균형입니다.
+
+### 5.3 Hot Spot 감지 — 언제 JIT 컴파일이 트리거되는가
+
+```bash
+# HotSpot 감지 임계값
+-XX:CompileThreshold=10000   # 기본: 인터프리터 + C1 합산 10000회 호출 시 C2
+-XX:Tier3InvocationThreshold=200    # Tier 3으로 올라가는 임계값
+-XX:Tier4InvocationThreshold=5000   # Tier 4 (C2)로 올라가는 임계값
+```
+
+HotSpot은 두 가지 카운터로 핫 코드를 감지합니다:
+- **호출 카운터(Invocation Counter)**: 메서드 호출 횟수
+- **백엣지 카운터(Back-Edge Counter)**: 루프 반복 횟수
+
+루프가 많은 코드는 메서드 호출 횟수가 적어도 백엣지 카운터가 임계값을 넘어 JIT 컴파일 대상이 됩니다.
+
+### 5.4 OSR(On-Stack Replacement) — 실행 중 교체
+
+```java
+// 이 메서드는 한 번만 호출되지만, 내부 루프가 매우 큼
+public long sumToMillion() {
+    long sum = 0;
+    for (long i = 0; i < 1_000_000; i++) {  // 백엣지 카운터 급증
+        sum += i;
+    }
+    return sum;
+}
+```
+
+OSR이 없다면: 이 메서드는 한 번만 호출되므로 호출 카운터는 1. JIT 컴파일 안 됨. 100만 번 루프를 인터프리터로 실행.
+
+OSR이 있으면: 루프 백엣지 카운터가 임계값 도달 → 루프 **실행 도중** JIT 컴파일 → 현재 스택 프레임을 컴파일된 코드로 교체 → 이후 루프 반복은 기계어로 실행.
+
+스택 프레임 교체를 위해 로컬 변수와 오퍼랜드 스택 상태를 컴파일된 코드의 레이아웃으로 변환합니다.
+
+### 5.5 메서드 인라이닝 — JIT의 핵심 최적화
+
+```java
+// 소스
+public int processOrder(Order order) {
+    int price = getPrice(order);   // 메서드 호출
+    int tax   = getTax(price);     // 메서드 호출
+    return price + tax;
+}
+
+private int getPrice(Order o) { return o.amount * o.unitPrice; }
+private int getTax(int price)  { return (int)(price * 0.1); }
+
+// JIT 인라이닝 후 (개념적으로)
+public int processOrder(Order order) {
+    // getPrice 인라인
+    int price = order.amount * order.unitPrice;
+    // getTax 인라인
+    int tax = (int)(price * 0.1);
+    return price + tax;
+}
+// 메서드 호출 오버헤드(스택 프레임 생성/소멸, 레지스터 저장/복원) 제거
+```
+
+**인라이닝의 연쇄 효과**: 인라이닝 자체보다 인라이닝 후 가능해지는 추가 최적화가 더 큽니다. 상수 폴딩, 죽은 코드 제거, 루프 최적화가 인라이닝된 코드를 대상으로 적용됩니다.
+
+**인라이닝 한계**:
+
+```bash
+-XX:MaxInlineSize=35        # 35 바이트코드 이하 메서드만 인라이닝
+-XX:FreqInlineSize=325      # 자주 호출되는 경우 325 바이트코드까지
+-XX:MaxInlineLevel=9        # 최대 인라이닝 깊이
+```
+
+```java
+// 인라이닝 방해 요소
+// 1. 메서드가 너무 큼 (바이트코드 크기 초과)
+// 2. 가상 메서드 - 런타임 타입이 확정되지 않으면 인라이닝 불가
+interface Shape { double area(); }
+class Circle implements Shape { public double area() { return PI * r * r; } }
+class Rect   implements Shape { public double area() { return w * h; } }
+
+// 호출 지점에서 Circle만 실제로 쓰인다면
+// → 단일형 인라인 캐시(Monomorphic Inline Cache) → 인라이닝 가능
+// 여러 타입이 섞이면 → 이형성(Megamorphic) → 인라이닝 불가
+```
+
+### 5.6 탈출 분석(Escape Analysis) — 힙 할당 없애기
+
+```java
+// 소스: 힙에 객체 생성처럼 보이지만...
+public double calcDistance(double x1, double y1, double x2, double y2) {
+    Point p1 = new Point(x1, y1);  // new = 힙 할당?
+    Point p2 = new Point(x2, y2);
+    return p1.distance(p2);
+}
+
+// JIT 탈출 분석: p1, p2가 이 메서드 밖으로 나가지 않음 (escape 안 함)
+// → Stack Allocation 또는 Scalar Replacement 적용
+
+// Scalar Replacement 후 (개념적)
+public double calcDistance(double x1, double y1, double x2, double y2) {
+    // Point 객체 생성 없이 필드를 로컬 변수로 직접 사용
+    double p1_x = x1, p1_y = y1;
+    double p2_x = x2, p2_y = y2;
+    double dx = p1_x - p2_x;
+    double dy = p1_y - p2_y;
+    return Math.sqrt(dx*dx + dy*dy);
+}
+// new Point() 할당 없음 → GC 부담 없음 → 훨씬 빠름
+```
+
+```bash
+# 탈출 분석 확인/제어
+-XX:+DoEscapeAnalysis    # 기본 활성화
+-XX:+PrintEscapeAnalysis # 탈출 분석 결과 출력 (디버그용)
+```
+
+### 5.7 락 제거(Lock Elimination)
+
+```java
+// StringBuffer는 synchronized 메서드를 사용함
+public String buildMessage(String name, int count) {
+    StringBuffer sb = new StringBuffer();  // 지역 변수 = 탈출 안 함
+    for (int i = 0; i < count; i++) {
+        sb.append(name);  // synchronized append
+        sb.append(",");   // synchronized append
+    }
+    return sb.toString();
+}
+
+// 탈출 분석: sb가 이 메서드 밖으로 나가지 않음
+// 다른 스레드가 절대 접근 불가 → synchronized 불필요
+// JIT: synchronized 모니터 진입/해제 코드 제거
+// 결과: StringBuilder 사용과 동일한 성능
+```
+
+### 5.8 JIT 컴파일 진단 도구
+
+```bash
+# JIT 컴파일 로그 출력
+java -XX:+PrintCompilation MyApp
+# 출력 예시:
+#  timestamp  tier method-name                     size
+#    1234  3       b  com.example.Service::process   42  ← Tier 3 C1 컴파일
+#    5678  4       com.example.Service::process       42  ← Tier 4 C2 컴파일
+#    5700  4      %  com.example.Algo::compute        100 ← % = OSR 컴파일
+
+# 인라이닝 상세 (매우 상세한 로그)
+java -XX:+UnlockDiagnosticVMOptions -XX:+PrintInlining MyApp
+
+# JITWatch: JIT 컴파일 시각화 도구
+# https://github.com/AdoptOpenJDK/jitwatch
+```
+
+---
+
+## 6. String Pool — intern, PermGen→Heap, Compact Strings
+
+### 6.1 String Pool의 존재 이유
+
+문자열은 Java에서 가장 많이 생성되는 객체입니다. "Hello"라는 문자열이 100군데에서 사용된다면, 100개의 동일한 객체를 만드는 것은 낭비입니다. String Pool은 동일한 문자열 리터럴을 **단 하나의 인스턴스**로 공유합니다.
+
+```java
+// 리터럴 = String Pool에서 가져옴
+String a = "Hello";
+String b = "Hello";
+System.out.println(a == b);        // true  — 같은 Pool 객체
+System.out.println(a.equals(b));   // true
+
+// new = 무조건 Heap에 새 객체 생성
+String c = new String("Hello");
+System.out.println(a == c);        // false — 다른 객체
+System.out.println(a.equals(c));   // true  — 내용은 같음
+
+// intern() = Heap 객체를 Pool에 등록하거나 Pool의 기존 객체 반환
+String d = c.intern();
+System.out.println(a == d);        // true  — Pool 객체
+```
+
+### 6.2 String Pool의 물리적 위치 변화
+
+| Java 버전 | Pool 위치 | GC 대상 |
+|-----------|-----------|---------|
+| Java 6 이하 | PermGen (고정 크기) | 거의 GC 안 됨 |
+| Java 7 이상 | Heap (Old Gen) | 일반 GC 대상 |
+
+**Java 7에서 Heap으로 이동한 이유**: PermGen은 크기가 고정되어 `intern()`을 과다 사용하면 `OutOfMemoryError: PermGen space`가 발생했습니다. Heap으로 이동하면 GC가 참조 없는 interned 문자열을 회수할 수 있고, Heap 크기 설정의 유연성도 얻습니다.
+
+```java
+// intern() 남용 주의
+public void processLargeFile(BufferedReader reader) {
+    String line;
+    while ((line = reader.readLine()) != null) {
+        // 각 라인을 intern하면 Pool이 무한정 성장할 수 있음
+        String interned = line.intern(); // 위험: 파일 라인 수만큼 Pool 증가
     }
 }
 
-// 올바른 예: AutoCloseable + try-with-resources
-public class ResourceHolder implements AutoCloseable {
-    @Override
-    public void close() {
-        cleanup();  // 호출 시점과 순서가 명확
-    }
+// 올바른 사용: 반복적으로 같은 값을 가지는 소수의 문자열만 intern
+// 예: 국가 코드, 상태 코드 같은 enum-like 값
+public static final String KR = "KR".intern();
+public static final String US = "US".intern();
+```
+
+### 6.3 Compact Strings (Java 9+) — 메모리 절반 절약
+
+Java 8까지 `String` 내부 배열은 `char[]` (UTF-16, 문자당 2바이트)였습니다. 영어/숫자/ASCII는 1바이트로 표현 가능한데 2바이트를 사용했습니다.
+
+```java
+// Java 8 이하 String 내부 (개념적)
+public final class String {
+    private final char[] value;  // UTF-16: 'A' = 2바이트
 }
-// 사용
-try (ResourceHolder rh = new ResourceHolder()) {
-    rh.doSomething();
+
+// Java 9+ Compact String
+public final class String {
+    private final byte[] value;  // Latin-1이면 1바이트, 아니면 UTF-16
+    private final byte coder;    // LATIN1 = 0, UTF16 = 1
 }
 ```
 
-**만약 finalize()를 쓰면?** 두 가지 문제가 생깁니다. 첫째, finalize 대상 객체는 GC가 즉시 수거하지 못하고 Finalization Queue에 넣어둔 후 별도 스레드가 finalize()를 실행한 뒤 다음 GC에서야 수거됩니다. 즉 GC 사이클이 최소 1회 더 필요합니다. 둘째, finalize()가 실행되지 않고 JVM이 종료되면 cleanup이 누락됩니다.
+```java
+// 실제로 어떤 인코딩이 선택되는지
+String ascii  = "Hello";           // LATIN1 → 5바이트 (50% 절약)
+String korean = "안녕하세요";     // UTF16  → 10바이트 (동일)
+String mixed  = "Hello 안녕";     // UTF16  → 한 글자라도 비ASCII면 UTF16
+
+// -XX:-CompactStrings 로 비활성화 가능 (하위 호환 필요 시)
+```
+
+**실제 영향**: 대부분의 애플리케이션에서 문자열의 상당수가 ASCII입니다. Compact Strings 적용 후 힙 사용량 약 10~15% 감소, String 연산 성능 향상 보고가 많습니다.
 
 ---
 
-## 10. 면접 포인트
+## 7. Java Memory Model (JMM) — happens-before와 메모리 배리어
 
-### Q1. JVM, JRE, JDK의 차이를 설명하세요.
+### 7.1 JMM이 왜 필요한가
 
-JVM은 바이트코드를 실행하는 가상 머신입니다. JRE는 JVM에 표준 라이브러리를 추가한 실행 환경으로, Java 프로그램을 실행만 할 수 있습니다. JDK는 JRE에 컴파일러(javac), 디버거(jdb), 프로파일러(jstat, jmap 등) 개발 도구를 추가한 개발 키트입니다. Java 9 이후에는 JRE가 별도 배포되지 않고 jlink로 커스텀 런타임 이미지를 만드는 방식으로 변경됐습니다.
+현대 CPU는 성능을 위해 명령어를 재배열(Reordering)하고, 각 코어는 자체 캐시(L1/L2)에 값을 보관합니다. 스레드 A가 변수를 수정해도, 스레드 B의 코어 캐시에는 이전 값이 남아있을 수 있습니다.
 
-### Q2. Java의 메모리 구조를 설명하세요.
+```java
+// CPU 캐시 가시성 문제
+public class StopFlag {
+    static boolean stop = false; // volatile 없음
 
-JVM 메모리는 5가지 영역으로 나뉩니다. Method Area(Metaspace)는 클래스 메타데이터, static 변수, 런타임 상수풀을 저장하며 모든 스레드가 공유합니다. Heap은 new로 생성된 모든 객체를 저장하며 Young Gen(Eden+Survivor)과 Old Gen으로 나뉩니다. JVM Stack은 스레드별 독립 영역으로 메서드 호출 시 스택 프레임이 쌓입니다. PC Register는 스레드별로 현재 실행 중인 바이트코드 명령어 주소를 저장합니다. Native Method Stack은 JNI 호출 시 사용됩니다.
+    public static void main(String[] args) throws InterruptedException {
+        Thread worker = new Thread(() -> {
+            while (!stop) { /* 무한 루프 가능성 */ }
+            System.out.println("멈춤");
+        });
+        worker.start();
+        Thread.sleep(100);
+        stop = true;  // 메인 스레드 캐시에만 반영될 수 있음
+        // worker 스레드는 캐시에서 stop=false를 계속 읽어 영원히 실행될 수 있음
+    }
+}
+```
 
-### Q3. Minor GC와 Full GC의 차이를 설명하세요.
+JMM(Java Memory Model)은 **어떤 조건에서 한 스레드의 쓰기가 다른 스레드에 보인다**는 규칙을 정의합니다.
 
-Minor GC는 Young Generation(Eden + Survivor)을 대상으로 합니다. 대부분의 객체가 Eden에서 빨리 죽는다는 가정(Weak Generational Hypothesis)을 기반으로 하며, Copy 알고리즘으로 살아남은 소수의 객체만 Survivor로 이동시킵니다. STW가 수 ms로 짧습니다.
+### 7.2 happens-before 관계
 
-Full GC는 Heap 전체(Young + Old)와 Metaspace까지 정리하며 STW가 수 초에 달할 수 있습니다. `System.gc()` 호출, Old Gen 부족, G1 GC의 Evacuation 실패 등이 원인입니다. 서비스에 직접적인 응답 지연을 유발하므로 반드시 최소화해야 합니다.
+happens-before는 JMM의 핵심 개념입니다. "A happens-before B"이면 A의 모든 쓰기가 B에서 보임을 보장합니다.
 
-### Q4. G1 GC와 ZGC의 차이를 설명하세요.
+JMM이 정의하는 happens-before 규칙:
 
-G1 GC는 힙을 동일한 크기의 Region으로 나눕니다. 쓰레기가 가장 많은 Region부터 수거(Garbage First)하며, MaxGCPauseMillis로 STW 목표 시간을 설정할 수 있습니다(보장은 아님). Java 9+ 기본 GC이며 4~16GB 힙에서 일반 서버 앱에 적합합니다.
+| 규칙 | 설명 |
+|------|------|
+| 프로그램 순서 | 같은 스레드에서 앞의 작업은 뒤의 작업보다 먼저 |
+| 모니터 잠금 | unlock → lock (같은 모니터) |
+| volatile | volatile 쓰기 → volatile 읽기 (같은 변수) |
+| 스레드 시작 | `start()` 이전 → 스레드 내 첫 번째 작업 |
+| 스레드 종료 | 스레드 내 마지막 작업 → `join()` 반환 |
+| 전이성 | A→B, B→C 이면 A→C |
 
-ZGC는 STW를 1ms 이하로 유지하는 것이 목표입니다. Colored Pointers와 Load Barriers 기술로 GC 대부분을 Concurrent하게 수행합니다. TB급 힙을 지원하며 초저지연이 요구되는 환경에 적합하지만 CPU 오버헤드가 있습니다.
+```java
+// volatile이 happens-before를 어떻게 보장하는가
+public class Publisher {
+    private int data = 0;
+    private volatile boolean ready = false; // 핵심
 
-### Q5. 클래스 로더의 부모 위임 모델이란?
+    // 스레드 A
+    public void publish() {
+        data = 42;           // ①
+        ready = true;        // ② volatile 쓰기
+        // ①은 ② happens-before 되므로 (프로그램 순서 규칙)
+        // ②가 ③에 happens-before 되므로 (volatile 규칙)
+        // 따라서 ①은 ④에 happens-before
+    }
 
-클래스 로드 요청이 들어오면 자신이 먼저 로드하지 않고 부모 클래스 로더에게 위임합니다. 부모가 로드하지 못할 때만 자신이 로드합니다. 장점 세 가지: ① java.lang.String을 악의적으로 교체하는 보안 공격 방지, ② 같은 클래스가 중복 로드되지 않음, ③ 핵심 클래스는 JVM 전체에서 동일한 객체 보장.
+    // 스레드 B
+    public void consume() {
+        while (!ready) {}    // ③ volatile 읽기 — ready=true를 확인
+        System.out.println(data); // ④ → 반드시 42 출력 보장
+    }
+}
+```
 
-단, Tomcat, OSGi 같은 컨테이너는 웹앱별 클래스 격리를 위해 부모 위임 모델을 의도적으로 우회합니다. 이때 잘못하면 같은 이름이지만 다른 ClassLoader가 로드한 클래스끼리 캐스팅 시 ClassCastException이 발생하는 문제가 있습니다.
+### 7.3 메모리 배리어 — 하드웨어 수준 구현
 
-### Q6. PermGen이 Java 8에서 Metaspace로 바뀐 이유는?
+happens-before는 추상적 개념이고, 실제 구현은 **메모리 배리어(Memory Barrier/Fence)** 명령어입니다.
 
-PermGen은 고정 크기 JVM Heap 영역이었기 때문에 `OutOfMemoryError: PermGen space`가 자주 발생했습니다. 특히 동적 클래스 생성이 많은 프레임워크 환경, Tomcat에서 웹앱 재배포 시 클래스 로더 누수가 원인이었습니다. Metaspace는 OS의 Native Memory를 직접 사용하므로 기본적으로 자동 확장됩니다. 다만 `-XX:MaxMetaspaceSize`를 설정하지 않으면 OS 전체 메모리를 소비할 수 있어 운영 환경에서는 상한선 설정이 필수입니다.
+| 배리어 종류 | 효과 |
+|-------------|------|
+| LoadLoad | 이후 Load가 이전 Load보다 먼저 실행되지 않음 |
+| LoadStore | 이후 Store가 이전 Load보다 먼저 실행되지 않음 |
+| StoreStore | 이후 Store가 이전 Store보다 먼저 실행되지 않음 |
+| StoreLoad | 이후 Load가 이전 Store보다 먼저 실행되지 않음 (가장 비싼 배리어) |
 
-### Q7. `OutOfMemoryError: Java heap space`와 `GC overhead limit exceeded`의 차이는?
+```java
+// volatile 필드 접근이 생성하는 배리어 (개념적)
+volatile int v;
 
-`Java heap space`는 힙에 새 객체를 할당할 공간이 없을 때 발생합니다. `GC overhead limit exceeded`는 GC가 전체 실행 시간의 98% 이상을 차지하면서도 2% 미만의 메모리만 회수할 때 JVM이 "이건 무한루프야"라고 판단해 던지는 예외입니다. 후자는 힙 크기가 너무 작거나 메모리 누수로 인해 GC를 계속해도 메모리를 확보할 수 없는 상황입니다. 힙 증가와 함께 메모리 누수 분석을 병행해야 합니다.
+// volatile 쓰기
+// [StoreStore barrier] ← 이전 모든 쓰기가 먼저 완료됨을 보장
+v = 1;
+// [StoreLoad barrier]  ← 이후 모든 읽기가 v=1을 본 이후에 실행됨을 보장
+
+// volatile 읽기
+// [LoadLoad barrier]
+int x = v;
+// [LoadStore barrier]
+```
+
+### 7.4 volatile, synchronized, AtomicInteger 비교
+
+```java
+// 1. volatile — 가시성만 보장, 원자성 보장 안 함
+public class Counter {
+    volatile int count = 0;
+    public void increment() {
+        count++;  // read → modify → write = 세 연산. 원자성 X
+        // 멀티스레드에서 count++ 동시 실행 시 일부 증가 유실 가능
+    }
+}
+
+// 2. synchronized — 가시성 + 원자성 보장, 하지만 락 경합 비용
+public class SyncCounter {
+    int count = 0;
+    public synchronized void increment() {
+        count++;  // 모니터 락으로 보호 = 원자적
+    }
+}
+
+// 3. AtomicInteger — CAS(Compare-And-Swap)로 락 없는 원자성
+public class AtomicCounter {
+    AtomicInteger count = new AtomicInteger(0);
+    public void increment() {
+        count.incrementAndGet();  // CAS 루프: 원자적, 락 없음
+    }
+}
+
+// 언제 무엇을 쓰는가:
+// - 단순 플래그(쓰기 한 번, 읽기만): volatile
+// - 복합 연산(check-then-act): synchronized 또는 AtomicXxx
+// - 고경합 카운터: LongAdder (스트라이프 방식, AtomicLong보다 경합 시 빠름)
+```
 
 ---
 
-## 11. 핵심 포인트 정리
+## 8. Direct Memory — ByteBuffer, Unsafe, Cleaner
 
-| 항목 | 핵심 내용 | 왜 중요한가 |
-|------|-----------|------------|
-| **JVM 구성** | Class Loader → Runtime Data Area → Execution Engine | 장애 원인 파악의 출발점 |
-| **클래스 로딩 순서** | Loading → Linking(Verify→Prepare→Resolve) → Initialization | 초기화 순서 오해 = 버그 |
-| **부모 위임 모델** | 부모에게 먼저 위임, 실패 시 자신이 처리 | 보안 + 중복 방지 |
-| **PermGen → Metaspace** | Java 8+, Native Memory 사용, 자동 확장 | MaxMetaspaceSize 설정 필수 |
-| **힙 구조** | Young Gen (Eden+S0+S1) + Old Gen | GC 동작 이해의 기반 |
-| **Minor GC** | Eden 꽉 찰 때, Copy 알고리즘, 수 ms | 빈번해도 괜찮음 |
-| **Full GC** | Old Gen 부족 시, 전체 힙, 수 초 | 절대 최소화 필요 |
-| **G1 GC** | Java 9+ 기본, Region 기반, MaxGCPauseMillis | 일반 서버 앱의 기본 선택 |
-| **ZGC** | Java 15+ 안정화, 1ms STW, TB급 힙 | 초저지연 요구 환경 |
-| **OOM 대응** | HeapDumpOnOutOfMemoryError 활성화, MAT 분석 | 원인 파악 없이 힙만 늘리면 재발 |
-| **GC 모니터링** | `jstat -gcutil <pid> 1000` 실시간 확인 | Old Gen 추이로 Full GC 예측 |
-| **힙 설정 원칙** | 운영 환경에서 `-Xms == -Xmx` | 리사이즈 STW 제거 |
+### 8.1 Direct Memory가 필요한 이유
+
+JVM 힙에 있는 데이터를 OS에 전달(네트워크, 파일 I/O)하려면 힙 → OS 커널 버퍼로 **복사**가 필요합니다. GC가 힙 객체를 이동시킬 수 있어 OS가 안정적인 주소를 참조할 수 없기 때문입니다.
+
+```
+힙 기반 ByteBuffer (HeapByteBuffer):
+Java 힙 → (복사) → OS 커널 버퍼 → 네트워크/파일
+
+Direct ByteBuffer (DirectByteBuffer):
+OS 네이티브 메모리 ← Java가 직접 참조
+OS가 동일 메모리 사용 → 복사 없음 (Zero-Copy)
+```
+
+### 8.2 ByteBuffer — Direct vs Heap
+
+```java
+// Heap ByteBuffer — Java 힙에 할당 (GC 관리)
+ByteBuffer heap = ByteBuffer.allocate(4096);
+
+// Direct ByteBuffer — OS 네이티브 메모리 할당 (GC 관리 안 됨)
+ByteBuffer direct = ByteBuffer.allocateDirect(4096);
+
+// 성능 특성 비교
+// Heap:   할당 빠름, 작은 데이터 읽기는 오히려 빠를 수 있음
+// Direct: 할당 느림(시스템 콜), 대용량 I/O에서 복사 없어 빠름
+
+// Direct Buffer 해제 — GC가 자동으로 안 함!
+// Java 9+ Cleaner 방식
+import sun.misc.Cleaner; // 내부 API, 직접 쓰면 안 됨
+// 대신 FileChannel, SocketChannel 등을 try-with-resources로 관리
+try (FileChannel fc = FileChannel.open(path)) {
+    MappedByteBuffer mmap = fc.map(MapMode.READ_ONLY, 0, fc.size());
+    // mmap은 fc가 닫혀도 즉시 해제되지 않음 — OS 레벨 매핑
+    // Java 14+: MemorySegment (Foreign Memory API)로 명시적 해제 가능
+}
+```
+
+### 8.3 Direct Memory 누수와 해결
+
+```bash
+# Direct Memory 한도 설정
+-XX:MaxDirectMemorySize=512m   # 기본: -Xmx와 동일
+
+# Direct Memory 사용량 모니터링
+jcmd <pid> VM.native_memory summary | grep Direct
+# 또는 JMX
+java.lang.management.ManagementFactory.getPlatformMXBeans(BufferPoolMXBean.class)
+```
+
+```java
+// Direct Buffer 누수 시나리오
+public class DirectBufferLeak {
+    void sendData(byte[] data) {
+        ByteBuffer buf = ByteBuffer.allocateDirect(data.length);
+        buf.put(data);
+        send(buf);
+        // buf에 대한 참조가 없어지면 GC 대상
+        // 하지만 GC가 실행되기 전까지 네이티브 메모리 미반환
+        // 네이티브 메모리 → OutOfMemoryError: Direct buffer memory
+    }
+}
+
+// 해결: 재사용 가능한 버퍼 풀 사용
+public class DirectBufferPool {
+    private final Queue<ByteBuffer> pool = new ConcurrentLinkedQueue<>();
+    private final int bufferSize;
+
+    public ByteBuffer acquire() {
+        ByteBuffer buf = pool.poll();
+        return (buf != null) ? buf.clear() : ByteBuffer.allocateDirect(bufferSize);
+    }
+
+    public void release(ByteBuffer buf) {
+        pool.offer(buf);
+    }
+}
+```
+
+### 8.4 sun.misc.Unsafe — 극한의 직접 메모리 접근
+
+```java
+// Unsafe는 JVM 내부용 API (직접 사용 자제, 개념 이해 목적)
+import sun.misc.Unsafe;
+import java.lang.reflect.Field;
+
+public class UnsafeDemo {
+    private static final Unsafe UNSAFE;
+
+    static {
+        try {
+            Field f = Unsafe.class.getDeclaredField("theUnsafe");
+            f.setAccessible(true);
+            UNSAFE = (Unsafe) f.get(null);
+        } catch (Exception e) { throw new RuntimeException(e); }
+    }
+
+    // 힙 우회: 특정 메모리 주소 직접 읽기/쓰기
+    public static void main(String[] args) {
+        // 오프힙 메모리 직접 할당 (GC 완전 우회)
+        long address = UNSAFE.allocateMemory(1024);
+        UNSAFE.putLong(address, 42L);
+        long value = UNSAFE.getLong(address);
+        System.out.println(value); // 42
+        UNSAFE.freeMemory(address); // 반드시 직접 해제
+
+        // CAS 연산 직접 수행
+        long[] arr = {0L};
+        long offset = UNSAFE.arrayBaseOffset(long[].class);
+        boolean success = UNSAFE.compareAndSwapLong(arr, offset, 0L, 100L);
+        System.out.println(success + ", " + arr[0]); // true, 100
+    }
+}
+
+// Java 22+ Foreign Function & Memory API (Unsafe의 공식 대체)
+import java.lang.foreign.*;
+MemorySegment segment = Arena.ofAuto().allocate(1024);
+segment.set(ValueLayout.JAVA_LONG, 0, 42L);
+long v = segment.get(ValueLayout.JAVA_LONG, 0);
+```
 
 ---
 
-## 참고 자료
+## 9. 진단 도구 — jps·jstack·jmap·jstat·JFR·async-profiler
 
-- [OpenJDK 공식 문서](https://openjdk.org/)
-- [Java Virtual Machine Specification](https://docs.oracle.com/javase/specs/jvms/se21/html/index.html)
-- [GraalVM 공식 문서](https://www.graalvm.org/latest/docs/)
-- [ZGC 설계 문서](https://wiki.openjdk.org/display/zgc)
-- [G1 GC 튜닝 가이드 (Oracle)](https://docs.oracle.com/en/java/javase/21/gctuning/garbage-first-g1-garbage-collector.html)
-- Eclipse Memory Analyzer (MAT): [https://eclipse.dev/mat/](https://eclipse.dev/mat/)
+### 9.1 jps — JVM 프로세스 목록
+
+```bash
+# 실행 중인 JVM 프로세스 목록
+jps -lv
+# 출력:
+# 12345 com.example.App -Xmx4g -XX:+UseG1GC
+# 67890 org.apache.catalina.startup.Bootstrap
+
+jps -l   # 메인 클래스 FQCN
+jps -v   # JVM 옵션 포함
+jps -m   # main 메서드 인수 포함
+```
+
+### 9.2 jstack — 스레드 덤프
+
+스레드 교착 상태(Deadlock), CPU 100% 원인 분석에 필수입니다.
+
+```bash
+# 스레드 덤프 생성
+jstack <pid>
+jstack -l <pid>   # 락 정보 포함 (더 상세)
+jstack <pid> > thread_dump.txt  # 파일로 저장
+
+# 전형적인 스레드 덤프 출력 분석
+"http-nio-8080-exec-1" #42 daemon prio=5 os_prio=0 tid=0x... nid=0x...
+   java.lang.Thread.State: BLOCKED (on object monitor)
+        at com.example.Service.getData(Service.java:55)  ← 어디서 블락?
+        - waiting to lock <0x...> (a java.util.HashMap)   ← 어떤 락?
+        at com.example.Controller.handle(Controller.java:30)
+```
+
+```java
+// 교착 상태 시나리오 — jstack으로 탐지 가능
+// jstack 출력에 "Found one Java-level deadlock:" 섹션이 나타남
+public class DeadlockExample {
+    static final Object lock1 = new Object();
+    static final Object lock2 = new Object();
+
+    Thread t1 = new Thread(() -> {
+        synchronized (lock1) {
+            sleep(100);
+            synchronized (lock2) { /* ... */ } // lock2 기다림
+        }
+    });
+
+    Thread t2 = new Thread(() -> {
+        synchronized (lock2) {
+            sleep(100);
+            synchronized (lock1) { /* ... */ } // lock1 기다림
+        }
+    });
+    // t1이 lock1을 잡고 lock2를 기다리고
+    // t2가 lock2를 잡고 lock1을 기다림 → 교착
+}
+```
+
+### 9.3 jmap — 힙 덤프와 힙 통계
+
+```bash
+# 힙 통계 (객체 수, 메모리 사용량)
+jmap -histo <pid> | head -30
+# 출력:
+#  num     #instances         #bytes  class name
+#    1:      12345678      987654321  [B (byte array)
+#    2:        234567       12345678  java.lang.String
+#    3:         45678        9876543  com.example.UserSession
+
+# 힙 덤프 (OOM 분석용) — 서비스 중단 주의!
+jmap -dump:format=b,file=heap.hprof <pid>
+jmap -dump:live,format=b,file=heap_live.hprof <pid>  # live 객체만
+
+# 힙 덤프 분석 도구
+# Eclipse MAT (Memory Analyzer Tool) — 가장 강력
+# VisualVM — GUI 기반
+# jhat (JDK 내장, Java 9 이후 제거됨)
+```
+
+```bash
+# OOM 발생 시 자동 덤프
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/var/log/heap.hprof
+```
+
+### 9.4 jstat — GC 통계 실시간 모니터링
+
+```bash
+# GC 통계 1초 간격으로 10회 출력
+jstat -gcutil <pid> 1000 10
+# 출력:
+#  S0     S1     E      O      M     CCS    YGC     YGCT    FGC    FGCT     GCT
+#   0.00  85.12  42.33  33.10  95.20  91.03     412    4.123    2    0.445    4.568
+# S0/S1: Survivor 사용률, E: Eden 사용률, O: Old 사용률
+# YGC: Minor GC 횟수, YGCT: Minor GC 누적 시간 (초)
+# FGC: Full GC 횟수, FGCT: Full GC 누적 시간
+
+jstat -gccause <pid> 1000    # GC 원인도 포함
+jstat -gcnew <pid> 1000      # Young Gen 상세
+jstat -gcold <pid> 1000      # Old Gen 상세
+jstat -class <pid> 1000      # 클래스 로딩 통계
+```
+
+### 9.5 JFR (Java Flight Recorder) — 프로덕션 안전 프로파일링
+
+JFR은 오버헤드가 약 1~2%로 **프로덕션 환경에서 상시 활성화** 가능한 프로파일러입니다.
+
+```bash
+# 즉시 시작 (운영 중인 서버)
+jcmd <pid> JFR.start name=myrecord duration=60s filename=app.jfr
+
+# 기록 상태 확인
+jcmd <pid> JFR.check
+
+# 기록 중지 및 저장
+jcmd <pid> JFR.stop name=myrecord
+
+# 시작 시 자동 활성화
+java -XX:StartFlightRecording=duration=60s,filename=app.jfr MyApp
+
+# JFR 분석 — JDK Mission Control(JMC)로 GUI 분석
+# 또는 jfr CLI
+jfr print --events GarbageCollection app.jfr
+jfr print --events SocketRead,SocketWrite app.jfr | head -50
+```
+
+**JFR로 수집할 수 있는 정보**:
+- GC 이벤트 (STW 시간, GC 원인, 세대별 크기)
+- CPU 사용률, 스레드 상태
+- 메서드 프로파일링 (샘플링 기반)
+- I/O 대기 시간 (파일, 네트워크)
+- 락 경합 (어느 락에서 얼마나 기다리는지)
+- JIT 컴파일 이벤트
+- 클래스 로딩/언로딩
+
+### 9.6 async-profiler — CPU 병목과 메모리 할당 프로파일링
+
+JFR의 메서드 프로파일링은 세이프포인트(Safepoint)에서만 샘플링해 정확도가 떨어질 수 있습니다. async-profiler는 AsyncGetCallTrace API와 perf_events를 조합해 **세이프포인트 편향 없이** 정확하게 샘플링합니다.
+
+```bash
+# async-profiler 다운로드 및 실행
+# https://github.com/async-profiler/async-profiler
+
+# CPU 프로파일링 30초, Flame Graph 생성
+./asprof -d 30 -f flamegraph.html <pid>
+
+# 메모리 할당 핫스팟 분석
+./asprof -e alloc -d 30 -f alloc.html <pid>
+
+# 락 경합 분석
+./asprof -e lock -d 30 -f lock.html <pid>
+
+# Wall-clock 프로파일링 (I/O 대기 포함)
+./asprof -e wall -d 30 -f wall.html <pid>
+```
+
+**Flame Graph 읽는 법**:
+
+```
+넓은 블록 = 그 메서드에서 시간을 많이 보냄
+세로 방향 = 콜 스택 (아래가 호출자, 위가 피호출자)
+색상 = 의미 없음 (구분용)
+
+[main]
+  [processOrders]              ← 넓으면 이 메서드 자체가 느림
+    [fetchFromDB]   [serialize] ← 하위 메서드로 시간이 분산됨
+```
 
 ---
-## 면접 포인트
 
-**Q1. JVM의 클래스 로딩 위임 모델(Parent Delegation)이 보안에 기여하는 이유는?**
-클래스 로딩 요청이 항상 Bootstrap ClassLoader까지 위임된 후 내려옵니다. 악성 코드가 `java.lang.String`이라는 이름의 클래스를 등록해도, Bootstrap이 이미 JDK의 String을 로딩했으므로 악성 클래스가 로딩되지 않습니다. JDK 핵심 클래스의 위장이 원천 차단됩니다. 단, OSGi나 플러그인 시스템처럼 격리된 클래스 로딩이 필요한 경우 위임 모델을 의도적으로 우회합니다(Context ClassLoader).
+## 10. 면접 포인트 5개 — 극한 WHY 답변
 
-**Q2. Metaspace가 Java 8에서 PermGen을 대체한 이유와 OOM 차이는?**
-PermGen은 JVM Heap 내 고정 크기 영역이었습니다. 클래스가 많이 로딩되면 `OutOfMemoryError: PermGen space`가 발생했고 JVM 재시작이 필요했습니다. Metaspace는 Native Memory(OS 메모리)를 사용해 기본적으로 크기 제한이 없습니다. 그러나 `-XX:MaxMetaspaceSize`를 설정하지 않으면 클래스 로더 누수 시 OS 메모리를 무한히 점유합니다. Metaspace OOM은 Native Memory 부족으로 서버 전체에 영향을 줄 수 있어 오히려 더 위험합니다. `-XX:MaxMetaspaceSize=256m` 같은 상한을 반드시 설정합니다.
+### 면접 포인트 1 — 부모 위임 모델을 왜 사용하는가? 직접 하면 안 되나?
 
-**Q3. JVM Stack에서 StackOverflowError가 발생하는 조건은?**
-각 메서드 호출마다 Stack Frame이 JVM Stack에 쌓입니다. 재귀 호출이 깊어지면 Stack이 가득 차 `StackOverflowError`가 발생합니다. 기본 스택 크기는 512KB~1MB. `-Xss2m`으로 늘릴 수 있지만 스레드 수 × 스택 크기만큼 메모리가 필요합니다. 재귀를 반복문(꼬리 재귀 최적화)으로 변환하는 것이 근본 해결책입니다. Java는 Scala와 달리 꼬리 재귀 최적화를 JVM 레벨에서 지원하지 않습니다.
+**표면 답변**: 보안, 중복 방지, 일관성을 위해서입니다.
 
-**Q4. JVM의 Escape Analysis가 GC 압력을 줄이는 메커니즘은?**
-JIT의 Escape Analysis는 객체가 생성된 메서드 밖으로 "탈출"하지 않는다는 것을 분석합니다. 탈출하지 않는 객체는 Heap 대신 Stack에 할당합니다(Stack Allocation). Stack에 할당된 객체는 메서드 종료 시 자동으로 해제되어 GC 대상이 되지 않습니다. 또한 탈출하지 않는 객체에 대한 동기화(`synchronized`)를 제거(Lock Elision)합니다. `-XX:+PrintEscapeAnalysis`로 분석 결과를 확인할 수 있습니다.
+**심층 답변**: 세 가지 문제를 동시에 해결합니다.
 
-**Q5. JVM 튜닝 시 Heap 크기 설정 기준은?**
-`-Xms`(초기)와 `-Xmx`(최대)를 같은 값으로 설정하면 JVM이 메모리를 동적으로 조정하지 않아 예측 가능한 동작을 합니다. 일반 권장: 컨테이너 메모리의 70~75% 할당(OS와 JVM Native Memory를 위해 여유 확보). 예: 4GB 컨테이너 → `-Xms3g -Xmx3g`. GC 튜닝 시작점: `Young:Old = 1:2`(G1GC 기본). GC 로그(`-Xlog:gc*:file=gc.log`)를 분석해 Full GC 빈도, 힙 사용 패턴을 확인 후 조정합니다. 컨테이너 환경에서 `-XX:+UseContainerSupport`(Java 10+)로 컨테이너 메모리 한계를 자동 감지합니다.
+첫째, 보안. `java.lang.String`이라는 이름의 악성 클래스를 ApplicationClassLoader가 먼저 로드해버리면 JVM 전체가 위험해집니다. 부모 위임 모델에서 Bootstrap CL이 먼저 진짜 String을 반환하므로 악성 클래스는 로드되지 않습니다.
+
+둘째, 유일성. `instanceof`, `ClassCastException` 판단의 기준은 Class 객체 동일성입니다. 같은 이름의 클래스가 다른 CL에 의해 두 번 로드되면 JVM이 다른 타입으로 인식합니다. `com.example.Foo cannot be cast to com.example.Foo` 오류가 이것입니다.
+
+셋째, 성능. 이미 로드된 클래스는 캐시에서 즉시 반환합니다. 매번 파일시스템을 탐색하지 않습니다.
+
+**극한 시나리오**: Tomcat에서 WebApp A와 B가 같은 Jackson 버전을 각각 들고 있을 때, Tomcat은 부모 위임을 **역전(WebApp-First)** 해서 각 앱이 자신의 Jackson을 사용합니다. 이 역전이 올바르게 구현되지 않으면 ClassCastException 미스터리가 발생합니다.
+
+---
+
+### 면접 포인트 2 — volatile은 어떻게 가시성을 보장하는가? synchronized와 차이는?
+
+**표면 답변**: volatile은 캐시를 우회해 메인 메모리에서 직접 읽고 씁니다.
+
+**심층 답변**: 엄밀히 말해 "메인 메모리에서 직접"은 과도한 단순화입니다. JMM 관점에서 volatile 쓰기는 StoreStore·StoreLoad 메모리 배리어를 삽입합니다. 배리어 이전의 모든 쓰기가 완료된 후 volatile 쓰기가 실행되고, 이후의 읽기는 이 volatile 쓰기를 반드시 봅니다. 이것이 happens-before 체인을 만듭니다.
+
+`synchronized`와 차이:
+- volatile: 가시성만 보장. `count++`처럼 read-modify-write 복합 연산은 원자적이지 않음.
+- synchronized: 가시성 + 원자성 + 상호배제. 하지만 모니터 진입/해제 비용.
+- AtomicXxx: CAS로 락 없이 원자성 보장. 고경합 환경에서 synchronized보다 빠름.
+
+**극한 시나리오**: 출판-구독 패턴에서 `boolean ready = false`에 volatile이 없으면, JIT 컴파일러가 루프를 최적화해 `while(!ready)`가 `while(true)`로 변환될 수 있습니다. 컴파일 타임에 ready가 루프 안에서 변경되지 않는다고 판단하기 때문입니다. volatile이 있으면 이 최적화가 금지됩니다.
+
+---
+
+### 면접 포인트 3 — JIT 티어드 컴파일에서 C1과 C2의 역할 분담은?
+
+**표면 답변**: C1은 빠르게, C2는 강하게 컴파일합니다.
+
+**심층 답변**: Tiered Compilation(Java 8부터 기본)은 워밍업 시간과 최대 성능 사이의 균형입니다.
+
+Tier 0(인터프리터)에서 시작해 호출 횟수와 루프 백엣지 카운터를 수집합니다. Tier 3(C1 + 전체 프로파일링)에서 **타입 피드백 정보**(어떤 구체 타입이 실제로 쓰이는지)를 수집합니다. Tier 4(C2)는 이 프로파일 정보를 바탕으로 **투기적 최적화(Speculative Optimization)** 를 합니다. 예를 들어 `Shape.area()`가 항상 `Circle`로 호출되는 것을 프로파일에서 확인하면, C2는 `Circle.area()`를 인라이닝합니다.
+
+만약 나중에 `Rectangle`이 전달되면? C2 코드가 역최적화(Deoptimization)되어 인터프리터로 복귀합니다. 이것이 JVM이 시간이 지날수록 빨라지는 이유입니다 — 실제 실행 패턴에 적응합니다.
+
+**극한 시나리오**: 마이크로서비스 컨테이너에서 JVM이 워밍업되기 전에 트래픽이 몰리면(Lambda cold start, Pod 재시작) Tier 0~3에서 느린 응답이 발생합니다. GraalVM Native Image는 AOT 컴파일로 이 문제를 해결하지만, 프로파일 기반 최적화를 포기하므로 최대 성능은 HotSpot JIT보다 낮을 수 있습니다.
+
+---
+
+### 면접 포인트 4 — PermGen이 Metaspace로 바뀐 이유와 Metaspace OOM은 어떻게 진단하는가?
+
+**표면 답변**: PermGen은 크기가 고정되어 OOM이 잦았고, Metaspace는 OS 메모리를 동적으로 사용합니다.
+
+**심층 답변**: PermGen OOM의 근본 원인은 두 가지였습니다.
+
+첫째, 고정 크기 + 동적 클래스 생성. Spring AOP, Hibernate, Mockito 등이 런타임에 동적 프록시 클래스를 생성합니다. 애플리케이션 규모가 커질수록 클래스 수가 예측 불가능하게 늘었습니다.
+
+둘째, 클래스 로더 누수. Tomcat에서 웹앱을 재배포할 때, 이전 ClassLoader가 GC되지 않으면 해당 CL이 로드한 모든 클래스가 PermGen에 잔류합니다. ClassLoader가 살아있는 한 클래스가 GC되지 않기 때문입니다.
+
+Metaspace로 전환하면서 동적 확장 문제는 해결됐지만, 클래스 로더 누수 문제는 여전합니다. 다만 누수가 있어도 Heap OOM이 아닌 Native Memory를 소비하므로 서버 전체 메모리가 압박을 받습니다.
+
+**Metaspace OOM 진단**:
+
+```bash
+# 클래스 로더 수와 로드된 클래스 수 추적
+jstat -class <pid> 5000 20
+# ClassLoader 수가 계속 증가 → 누수 의심
+
+# 힙 덤프 후 MAT에서 ClassLoader 분석
+jmap -dump:live,format=b,file=heap.hprof <pid>
+# MAT: "Leak Suspects" → "ClassLoader" 검색
+# 살아있는 ClassLoader 수 확인
+```
+
+---
+
+### 면접 포인트 5 — 탈출 분석은 무엇이고, 왜 new가 항상 힙 할당이 아닐 수 있는가?
+
+**표면 답변**: 탈출 분석으로 객체가 메서드 밖으로 나가지 않으면 힙에 안 올릴 수 있습니다.
+
+**심층 답변**: 탈출 분석(Escape Analysis)은 C2 컴파일러가 수행하는 정적 분석입니다. 객체가 메서드 범위를 벗어나는지(탈출하는지) 분석합니다.
+
+탈출하지 않는 객체에 적용되는 최적화:
+
+1. **스칼라 치환(Scalar Replacement)**: 객체를 필드 단위 로컬 변수로 분해. 객체 자체가 생성되지 않습니다.
+2. **스택 할당(Stack Allocation)**: 힙 대신 스택에 할당. 메서드 종료 시 자동 해제, GC 부담 없음.
+3. **락 제거(Lock Elimination)**: 지역 객체의 synchronized 블록 제거. `StringBuffer`의 synchronized가 사라집니다.
+
+**극한 시나리오**: 탈출 분석은 추론이므로 틀릴 수 있습니다. 리플렉션, JNI, 직렬화가 개입하면 객체가 예상치 못한 방식으로 탈출할 수 있습니다. JIT는 보수적으로 이런 경우 힙 할당을 유지합니다. 따라서 리플렉션을 많이 쓰는 코드는 탈출 분석 효과를 덜 받습니다.
+
+또한 인라이닝과 탈출 분석은 연계됩니다. 메서드가 인라이닝되면 인라인된 코드 내 객체들이 더 큰 컨텍스트에서 탈출 분석을 받습니다. 인라이닝 → 탈출 분석 → 스칼라 치환 → 힙 할당 제거의 연쇄가 JVM 성능의 핵심입니다.
+
+---
+
+## 11. OOM 발생 시나리오별 진단 매트릭스
+
+| OOM 메시지 | 영역 | 주요 원인 | 진단 도구 | 해결 방향 |
+|-----------|------|-----------|-----------|----------|
+| `Java heap space` | Heap | 객체 누수, 힙 너무 작음 | jmap, MAT | `-Xmx` 증가, 누수 수정 |
+| `GC overhead limit` | Heap | GC가 CPU 98% 점유 | jstat, JFR | 힙 증가, 객체 패턴 개선 |
+| `Metaspace` | Metaspace | ClassLoader 누수 | jstat -class | CL 생명주기 관리 |
+| `Direct buffer memory` | Native | DirectByteBuffer 과다 | JMX BufferPool | 버퍼 풀 도입, `MaxDirectMemorySize` 증가 |
+| `unable to create native thread` | Native | 스레드 과다 생성 | jstack, OS ulimit | 스레드 풀 사용, Virtual Thread 검토 |
+| `StackOverflowError` | Stack | 무한 재귀 | jstack | 재귀→반복 전환, `-Xss` 증가 |
+
+```java
+// GC 오버헤드 상한 예외 발생 시나리오
+public class GCOverheadDemo {
+    public static void main(String[] args) {
+        List<String> list = new ArrayList<>();
+        while (true) {
+            // 계속 String을 추가하면서 일부를 제거해 GC가 바빠지게 함
+            for (int i = 0; i < 1000; i++) {
+                list.add("data" + i); // GC 압박
+            }
+            if (list.size() > 500_000) {
+                list.subList(0, 100_000).clear(); // 일부 제거
+            }
+            // GC가 연속으로 실행되고 회수량이 적으면
+            // "GC overhead limit exceeded" 발생
+        }
+    }
+}
+```
+
+---
+
+## 12. 정리 — JVM 지식의 계층
+
+```mermaid
+graph LR
+    CL["Class Loading"] --> RDA["Runtime Data Areas"]
+    RDA --> JIT["JIT 최적화"]
+    JIT --> JMM["Java Memory Model"]
+    JMM --> GC["GC 튜닝"]
+    GC --> TOOL["진단 도구"]
+```
+
+JVM을 깊이 이해하면 장애 상황에서 원인을 빠르게 좁힐 수 있습니다.
+
+- **CPU 100%**: jstack으로 스레드 상태 확인 → RUNNABLE 스레드 다수면 연산 병목, JFR/async-profiler로 핫메서드 찾기
+- **응답 지연 스파이크**: jstat으로 GC 빈도/시간 확인 → Full GC가 원인이면 힙 튜닝 또는 GC 알고리즘 변경
+- **메모리 증가**: jmap histo로 증가하는 클래스 확인 → MAT로 GC Root까지 참조 체인 추적
+- **Metaspace 증가**: jstat -class로 클래스 로딩 통계 → ClassLoader 누수 여부 확인
+
+면접에서 JVM을 묻는 이유는 단순 암기가 아니라, **런타임 동작을 예측하고 문제를 진단하는 능력**을 보기 위해서입니다. "이 코드가 실제로 어떻게 실행되는가"를 JVM 메커니즘으로 설명할 수 있어야 시니어 개발자입니다.
